CI images update

--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-14 01:48:55
+lastsearch = 2024-07-14 03:52:12
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -440,4 +440,9 @@ url = https://moh.gov.vn/hoat-dong-cua-lanh-dao-bo/-/asset_publisher/k206Q9qkZOq
 match = -193.8%%
 title = Chứng khoán 12/7: Thị trường “rung lắc”, bất ngờ một cổ ...
 url = https://thitruongtaichinh.kinhtedothi.vn/chung-khoan/chung-khoan-127-thi-truong-rung-lac-bat-ngo-mot-co-phieu-duoc-pham-lien-tuc-vuot-dinh-124060.html
+
+[subaruminhthanh.com.vn]
+match = -12.5%%
+title = Subaru Forester 2.0i-L
+url = https://subaruminhthanh.com.vn/forester-2-0i-l.html
 
