--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-14 00:51:51
+lastsearch = 2024-07-14 03:46:41
 
 [scholar.google.com]
 match = -43.8%%
@@ -117,9 +117,9 @@ title = THUẬN PHÁO MAI HOA TUYỀN PHÁ HOÀNH XE TẬP 18
 url = https://www.youtube.com/watch?v=5tAzMm3oK7w
 
 [books.google.com]
-match = -193.8%%
-title = Từ điẻ̂n địa chí Bạc Liêu - Page 307 - Google Books Result
-url = https://books.google.com/books?id=GdKw75bQHZUC&pg=PA307&lpg=PA307&dq=chieu+lac+soc+18&source=bl&ots=hUKdpb9tZV&sig=ACfU3U3HyNluymxSzqa9ZlAfRMqewEg46Q&hl=en&sa=X&ved=2ahUKEwi4pv3ToKOHAxXZHEQIHZDSAtwQ6AF6BAgWEAM
+match = -156.2%%
+title = Nizu #3: Bạn bè - Page 14 - Google Books Result
+url = https://books.google.com/books?id=saXpEAAAQBAJ&pg=PA14&lpg=PA14&dq=chieu+lac+soc+18&source=bl&ots=dtkLubhr32&sig=ACfU3U3HYWxJ3l2GagyMAFrZSQCY4MOsrw&hl=en&sa=X&ved=2ahUKEwj5go2_8aSHAxVdHzQIHcj3CVUQ6AF6BAgcEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
@@ -377,9 +377,9 @@ title = CẦN XE KÉO CONT 01X20'DC từ CÁT LÁI GIANG NAM - ...
 url = https://m.facebook.com/groups/logisticsvietnam/posts/8429178217116624/
 
 [shopee.vn]
-match = -75.0%%
-title = chiếu lác xuất khẩu 1m8 chiếu dầy cao cấp
-url = https://shopee.vn/chiếu-lác-xuất-khẩu-1m8-chiếu-dầy-cao-cấp-i.275355238.7156323941
+match = -181.2%%
+title = Lắc tay nữ dạng bi khía mạ vàng 18K siêu sang,đeo ...
+url = https://shopee.vn/Lắc-tay-nữ-dạng-bi-khía-mạ-vàng-18K-siêu-sang-đeo-siêu-đẹp-giá-siêu-tốt-(vàng)-i.202262748.5215148232
 
 [chieulongdinh.com.vn]
 match = -87.5%%
