--- a/images/chieu-dieu-hoa-cao-su-180x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-180x200.html
 lastopen = 2024-07-01 06:28:11
 
 [search]
-lastsearch = 2024-07-14 03:27:12
+lastsearch = 2024-07-14 03:44:20
 
 [demxanh.com]
-match = 31.0%%
-title = Chiếu điều hòa cao su non Tencel Xanh coban
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-coban.html
+match = 17.2%%
+title = Chiếu điều hòa cao su non đa sắc xanh dương gấu
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-xanh-duong-gau.html
 
 [leflair.com]
 match = 6.9%%
