--- a/images/chieu-du-lichvt-22-3m/config.ini
+++ b/images/chieu-du-lichvt-22-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lichvt-22-3m.html
 lastopen = 2024-06-09 21:46:25
 
 [search]
-lastsearch = 2024-07-14 02:47:37
+lastsearch = 2024-07-14 03:50:03
 
 [vnexpress.net]
 match = -128.6%%
@@ -27,9 +27,9 @@ title = Tất tần tật kinh nghiệm về tour du lịch Vũng Tàu 2022
 url = https://liontrip.vn/tat-tan-tat-kinh-nghiem-ve-tour-du-lich-vung-tau/
 
 [haivan.com]
-match = -66.7%%
-title = Kinh nghiệm du lịch Vũng Tàu 3 ngày 2 đêm từ A đến Z
-url = https://haivan.com/diem-den/Vung-tau/kinh-nghiem-du-lich-vung-tau-3-ngay-2-dem-tu-a-den-z
+match = -85.7%%
+title = Kinh nghiệm du lịch Vũng Tàu cho gia đình - 2 ngày 1 đêm
+url = https://haivan.com/diem-den/Vung-tau/kinh-nghiem-du-lich-vung-tau-cho-gia-dinh-2-ngay-1-dem
 
 [lockernlock.vn]
 match = -71.4%%
@@ -47,8 +47,8 @@ title = Côn Đảo khai mạc đường hoa, khu vui Xuân và ẩm thực ...
 url = https://www.baobariavungtau.com.vn/du-lich/202402/con-dao-khai-mac-duong-hoa-khu-vui-xuan-va-am-thuc-xuan-1003168/index.htm
 
 [www.etrip4u.com]
-match = -71.4%%
-title = Những địa điểm du lịch ở Vũng Tàu siêu đẹp nên biết
+match = -52.4%%
+title = Những địa điểm du lịch ở Vũng Tàu đẹp - Etrip4u
 url = https://www.etrip4u.com/du-lich/mach-ban-nhung-dia-diem-du-lich-o-vung-tau-sieu-dep
 
 [www.gt-rider.com]
