--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-07-14 02:45:37
+lastsearch = 2024-07-14 03:45:57
 
 [www.youtube.com]
-match = -500.0%%
-title = Ren plays Chalk Outlines (his collab with Chichilla). The Big ...
-url = https://www.youtube.com/watch?v=6ROuMEXhOfA
+match = -330.0%%
+title = Hands Off My Yandere! - 14 Days With You DAY 2 Demo
+url = https://www.youtube.com/watch?v=52d9dTSCRaI
 
 [www.sinimed.co.il]
 match = -370.0%%
@@ -37,9 +37,9 @@ title = Ren 14 🏴󠁧󠁢󠁥󠁮󠁧󠁿 🏴󠁧󠁢󠁷󠁬󠁳󠁿slice of
 url = https://twitter.com/ScottRen14/status/1787896938110820854
 
 [www.facebook.com]
-match = -400.0%%
-title = AcuPro Academy - Ren 14 (CV 14) located 6 cun above the...
-url = https://www.facebook.com/AcuProAcademy/posts/ren-14-cv-14-located-6-cun-above-the-navel-is-the-front-mu-point-of-the-heart-wh/1547299788744965/
+match = 0.0%%
+title = 
+url = https://www.facebook.com/vuimedu/videos/one-of-the-most-powerful-acupuncture-points-is-yintang-located-on-our-third-eye-/3086873844866489/
 
 [books.google.com]
 match = -460.0%%
