--- a/images/tham-ni-xop-hinh-60/config.ini
+++ b/images/tham-ni-xop-hinh-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-hinh-60.html
 lastopen = 2024-06-07 00:35:14
 
 [search]
-lastsearch = 2024-07-14 03:33:19
+lastsearch = 2024-07-14 03:51:38
 
 [xoptraisan.info]
 match = 5.3%%
@@ -17,9 +17,9 @@ title = Thảm nỉ ghép 60x60cm trơn màu đỏ, ghi
 url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-tron-do-ghi
 
 [thamvinhthuan.com]
-match = 26.3%%
-title = Thảm xốp hoạt hình 60 x 60 cm
-url = https://thamvinhthuan.com/san-pham/tham-xop-hoat-hinh-60-x-60-cm/
+match = 5.3%%
+title = Thảm xốp một màu 60cm x 60 cm
+url = https://thamvinhthuan.com/san-pham/tham-xop-mot-mau-van-caro-60-x-60-cm/
 
 [thamht.vn]
 match = 52.6%%
@@ -27,9 +27,9 @@ title = Thảm xốp hoạt hình 60x60
 url = https://thamht.vn/products/tham-xop-hoat-hinh-cho-tre-em
 
 [shopee.vn]
-match = -73.7%%
-title = thảm xốp ghép giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=thảm xốp ghép
+match = -121.1%%
+title = Thảm xốp trải sàn - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/thảm xốp/trải sàn
 
 [thamtretho.com]
 match = 37.5%%
