--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-07-14 02:16:01
+lastsearch = 2024-07-14 03:50:14
 
 [www.tui.co.uk]
 match = -40.0%%
@@ -17,9 +17,9 @@ title = TUI's new Birmingham-Singapore flight takes off
 url = https://www.travelgossip.co.uk/latestnews/tuis-birmingham-singapore-flight-takes-off/
 
 [www.flightaware.com]
-match = -213.3%%
-title = BY165 (TOM165) TUI Airways Flight Tracking and History ...
-url = https://www.flightaware.com/live/flight/TOM165/history/20240315/0520Z/WSSS/EGCC
+match = -60.0%%
+title = Live TUI Airways Flight Status
+url = https://www.flightaware.com/live/fleet/TOM
 
 [www.cruisetimetables.com]
 match = -20.0%%
