--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-07-14 02:52:58
+lastsearch = 2024-07-14 04:15:58
 
 [www.instagram.com]
 match = -30.8%%
@@ -12,9 +12,9 @@ title = Yuki Chan (@yukichan_la)
 url = https://www.instagram.com/yukichan_la/?hl=en
 
 [www.linkedin.com]
-match = -61.5%%
-title = Illustrator - Hoi Chan Studio
-url = https://www.linkedin.com/in/yiu-hoi-chan
+match = -192.3%%
+title = Hoi Ki Chan - 2D Game Artist - Omoté Singapore
+url = https://www.linkedin.com/in/hoi-ki-chan-519219147
 
 [www.creativeboom.com]
 match = -307.7%%
@@ -117,8 +117,8 @@ title = Team
 url = https://www.5plusdesign.com/team
 
 [www.scmp.com]
-match = -223.1%%
-title = Meet the HKU graduate making vegan treats to ...
+match = -300.0%%
+title = Meet the HKU graduate making vegan treats to promote a ...
 url = https://www.scmp.com/yp/discover/news/hong-kong/article/3057691/meet-hku-graduate-making-vegan-treats-promote-plant
 
 [mutualpublishing.com]
@@ -167,8 +167,8 @@ title = Service-Learning Capacity Enhancement in Hong Kong ...
 url = https://link.springer.com/book/10.1007/978-981-19-2437-8
 
 [www.thisiscolossal.com]
-match = -215.4%%
-title = Hoi Chan Translates Everyday Experiences into ...
+match = -300.0%%
+title = Hoi Chan Translates Everyday Experiences into ... - Colossal
 url = https://www.thisiscolossal.com/2024/03/hoi-chan-illustrations/
 
 [www.csus.edu]
