--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-14 03:46:41
+lastsearch = 2024-07-14 04:13:15
 
 [scholar.google.com]
 match = -43.8%%
@@ -117,9 +117,9 @@ title = THUẬN PHÁO MAI HOA TUYỀN PHÁ HOÀNH XE TẬP 18
 url = https://www.youtube.com/watch?v=5tAzMm3oK7w
 
 [books.google.com]
-match = -156.2%%
-title = Nizu #3: Bạn bè - Page 14 - Google Books Result
-url = https://books.google.com/books?id=saXpEAAAQBAJ&pg=PA14&lpg=PA14&dq=chieu+lac+soc+18&source=bl&ots=dtkLubhr32&sig=ACfU3U3HYWxJ3l2GagyMAFrZSQCY4MOsrw&hl=en&sa=X&ved=2ahUKEwj5go2_8aSHAxVdHzQIHcj3CVUQ6AF6BAgcEAM
+match = -87.5%%
+title = NCĐT số 774: Lạc Lối Trong Mạng Xã Hội
+url = https://books.google.com/books?id=TQpuEAAAQBAJ&pg=PA6&lpg=PA6&dq=chieu+lac+soc+18&source=bl&ots=HENO0R20_A&sig=ACfU3U2qzbtUZJvaU_hmJojYnZO8J-pKng&hl=en&sa=X&ved=2ahUKEwjekYG396SHAxWLEjQIHYmsCVAQ6AF6BAgbEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
