--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-07-14 03:27:54
+lastsearch = 2024-07-14 04:18:55
 
 [shopee.vn]
 match = -171.4%%
@@ -58,8 +58,8 @@ url = https://demxanh.com/cach-su-dung-man-chup-tu-bung-cao-cap.html
 
 [www.mungtubung.com]
 match = -178.6%%
-title = Mùng chụp tự bung xếp gọn đủ kích thước và màu sắc
-url = https://www.mungtubung.com/mung-chup-tu-bung-xep-gon-cao-cap.html
+title = Mùng chụp chống muỗi cao cấp Bảo Lộc | XEM NGAY
+url = https://www.mungtubung.com/
 
 [munghoangphat.com]
 match = -150.0%%
