--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-07-14 04:16:31
+lastsearch = 2024-07-14 04:31:27
 
 [www.diepxuan.com]
 match = -72.7%%
@@ -13,8 +13,8 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 
 [shopee.vn]
 match = 13.6%%
-title = Bộ Ga Gối Bo Chun Trần Phi Lụa Coco
-url = https://shopee.vn/product/494447407/24864025138
+title = Ga gối nỉ Coco bo chun hoa trà
+url = https://shopee.vn/Ga-gối-nỉ-Coco-bo-chun-hoa-trà-i.141565512.17099296949
 
 [m.facebook.com]
 match = -18.2%%
