--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-07-14 01:46:20
+lastsearch = 2024-07-14 04:25:26
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -27,9 +27,9 @@ title = Top 10+ Bộ Chăn Ga Gối Đệm Màu Đỏ Hot Nhất Hiện Nay
 url = https://foreverbedding.net/mau-chan-ga-goi-dem-mau-do
 
 [changagoidemsonghong.com]
-match = 37.0%%
-title = Chăn ga gối Home mã H17-048
-url = https://changagoidemsonghong.com/chan-ga-goi-home-h17-048
+match = -28.6%%
+title = Chăn ga gối Home H19 066 cao cấp chính hãng Sông Hồng
+url = https://changagoidemsonghong.com/chan-ga-goi-h19-066
 
 [flexhouse.vn]
 match = -3.6%%
@@ -42,9 +42,9 @@ title = Ruột Chăn, Ruột Gối Ngủ Cao Cấp, Giá Rẻ - JYSK.vn
 url = https://jysk.vn/ruot-chan-goi
 
 [songhong.info]
-match = 14.3%%
-title = Chăn ga gối cao cấp Urban mã UC23-039
-url = https://songhong.info/chan-ga-goi-uc039
+match = 10.7%%
+title = Mẫu chăn ga gối cao cấp mã mầu UC22-019
+url = https://songhong.info/chan-ga-goi-uc019
 
 [cuahangchangagoidem.com]
 match = 3.6%%
