--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-14 04:13:59
+lastsearch = 2024-07-14 04:28:52
 
 [www.instagram.com]
-match = -176.9%%
-title = HArris CHan | My first dior saddle bagggg. 🎅🏽🧝🏻 ...
-url = https://www.instagram.com/_harris_chan_/p/Cz3dzHtyRjX/
+match = -323.1%%
+title = Instagram video by Chan Dior Sunshade • Jun 2, 2024 at 8:35 ...
+url = https://www.instagram.com/reel/C7vRnd7gLPB/
 
 [hk.linkedin.com]
 match = -100.0%%
@@ -17,8 +17,8 @@ title = Hoi Yee Ng - Christian Dior Couture
 url = https://hk.linkedin.com/in/hoi-yee-ng-662733106
 
 [wwd.com]
-match = -184.6%%
-title = Kimbee Chan Furthers Creative Pursuit With ...
+match = -238.5%%
+title = Kimbee Chan Furthers Creative Pursuit With Crochet ...
 url = https://wwd.com/fashion-news/fashion-scoops/kimbee-chan-knitwear-workshop-happy-yarn-1235938455/
 
 [vote.umich.edu]
@@ -224,7 +224,7 @@ url = https://www.blue17.co.uk/vintage-blog/midcentury-models-renee-breton/
 [shopee.vn]
 match = -176.9%%
 title = chăn ga dior giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chăn ga dior&urlold=chan-ga-lua-thuong-hieu-dior/990638083154560956/343220106741734172/ 
+url = https://shopee.vn/search?keyword=chăn ga dior&urlold=chan-ga-lua-thuong-hieu-dior/990638083154560956/343220106741734172/
 
 [hongkongfp.com]
 match = -269.2%%
