--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-14 04:20:03
+lastsearch = 2024-07-14 04:32:56
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlerHIri8&sig=ACfU3U1K3jgq3ux5HYJF8WIdE2JdP3gjpg&hl=en&sa=X&ved=2ahUKEwju4bX5-KSHAxU5DTQIHe53BVsQ6AF6BAggEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlerHJopc&sig=ACfU3U38on_CKBa9j_AfyQ4SOBVB1PhSqQ&hl=en&sa=X&ved=2ahUKEwjb76zq-6SHAxUqL1kFHWylA7MQ6AF6BAgUEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
