CI images update

--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-14 02:26:13
+lastsearch = 2024-07-14 04:46:07
 
 [shopee.vn]
 match = -28.0%%
@@ -255,4 +255,9 @@ url = https://groups.io/g/VanHanhKHXH5/topic/56492954?p=Created,,,20,2,0,0::rece
 match = 12.0%%
 title = Vé máy bay Đài Đông Đài Bắc giá rẻ
 url = https://vn.trip.com/flights/taitung-to-taipei/airfares-ttt-tpe/
+
+[www.china-airlines.com]
+match = -12.0%%
+title = Tìm kiếm chuyến bay | China Airlines
+url = https://www.china-airlines.com/sea/vi/booking/book-flights/flight-search?lang=vi-VN&deptstn=HAN&arrstn=TPE
 
