--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-14 04:28:21
+lastsearch = 2024-07-14 04:47:12
 
 [www.georgianicols.com]
 match = -69.2%%
@@ -27,9 +27,9 @@ title = License renewal procedures
 url = https://www.iihs.org/topics/older-drivers/license-renewal-laws-table
 
 [en.wikipedia.org]
-match = -92.3%%
-title = Anthony Edwards (basketball)
-url = https://en.wikipedia.org/wiki/Anthony_Edwards_(basketball)
+match = -53.8%%
+title = Period (periodic table)
+url = https://en.wikipedia.org/wiki/Period_(periodic_table)
 
 [www.facebook.com]
 match = -61.5%%
@@ -352,9 +352,9 @@ title = Charlie Condon - 2024 Baseball Roster
 url = https://georgiadogs.com/sports/baseball/roster/charlie-condon/7496
 
 [www.nature.com]
-match = -215.4%%
-title = Framework of magnetostrain responsive Ni–Mn–Ga ...
-url = https://www.nature.com/articles/s41598-023-33945-y
+match = -230.8%%
+title = 68 Ga generator based on nano-SnO 2 for PET imaging
+url = https://www.nature.com/articles/s41598-020-69659-8
 
 [www.dictionary.com]
 match = 0.0%%
@@ -369,7 +369,7 @@ url = https://eur-lex.europa.eu/legal-content/DA/TXT/PDF/?uri=OJ:C_202402547
 [www.google.com]
 match = 0.0%%
 title = Google Maps
-url = https://www.google.com/maps/?q=,
+url = https://www.google.com/maps/dir/
 
 [data.census.gov]
 match = -38.5%%
@@ -402,8 +402,8 @@ title = Metal Weight Calculator
 url = https://www.twmetals.com/resources/calculators.html
 
 [www.reddit.com]
-match = -192.3%%
-title = The Eminence in Shadow - Episode 16 discussion
+match = -269.2%%
+title = The Eminence in Shadow - Episode 16 discussion : r/anime
 url = https://www.reddit.com/r/anime/comments/10f94ar/kage_no_jitsuryokusha_ni_naritakute_the_eminence/
 
 [translate.google.com]
@@ -455,4 +455,9 @@ url = https://www.biblegateway.com/passage/?search=John 3:16&version=NIV
 match = 7.7%%
 title = TECH NI CAL DATA
 url = https://www.vikinggroupinc.com/databook/Old/Sprinkler1/080788sep2001.pdf
+
+[jaehakim.substack.com]
+match = 0.0%%
+title = 
+url = https://jaehakim.substack.com/p/silenced-is-a-brutal-look-at-child-abuse/comments
 
