--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-07-14 04:25:26
+lastsearch = 2024-07-14 04:49:20
 
 [www.diepxuan.com]
-match = 3.6%%
-title = Chăn ga gối màu - Chăn ga gối đệm Điệp Xuân
+match = 12.0%%
+title = Điệp Xuân Chăn ga gối màu
 url = https://www.diepxuan.com/chan-ga-goi-mau.html
 
 [shop.chanrathanhthuy.com]
@@ -27,9 +27,9 @@ title = Top 10+ Bộ Chăn Ga Gối Đệm Màu Đỏ Hot Nhất Hiện Nay
 url = https://foreverbedding.net/mau-chan-ga-goi-dem-mau-do
 
 [changagoidemsonghong.com]
-match = -28.6%%
-title = Chăn ga gối Home H19 066 cao cấp chính hãng Sông Hồng
-url = https://changagoidemsonghong.com/chan-ga-goi-h19-066
+match = 37.0%%
+title = Chăn ga gối Home mã H17-048
+url = https://changagoidemsonghong.com/chan-ga-goi-home-h17-048
 
 [flexhouse.vn]
 match = -3.6%%
