--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-07-14 04:46:20
+lastsearch = 2024-07-14 05:15:27
 
 [www.diepxuan.com]
-match = -72.7%%
-title = Điệp Xuân Bộ ga gối chun coco 18 - Chăn ga gối đệm Điệp Xuân
+match = -27.3%%
+title = Bộ ga gối chun coco 18 - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 
 [shopee.vn]
