--- a/images/chieu-dieu-hoa-khong-goi-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-18.html
 lastopen = 2024-06-09 22:26:01
 
 [search]
-lastsearch = 2024-07-13 20:29:34
+lastsearch = 2024-07-14 05:17:00
 
 [demxanh.com]
 match = 0.0%%
@@ -62,9 +62,9 @@ title = Thực hư về khả năng làm mát của chiếu điều hòa | An to
 url = https://www.youtube.com/watch?v=ccaTWASdw7I
 
 [kyoryo.vn]
-match = -40.7%%
-title = Top 3 loại chiếu điều hòa cao cấp nhất thị trường - Kyoryo
-url = https://kyoryo.vn/tin-tuc/top-3-loai-chieu-dieu-hoa-cao-cap-nhat-thi-truong-.html
+match = 18.5%%
+title = Chiếu (Ga) Điều Hòa Viscose mát - Kyoryo
+url = https://kyoryo.vn/chieu-cao-cap/chieu-dieu-hoa-viscose.html
 
 [thegioinem.com]
 match = 3.7%%
