--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-14 00:44:10
+lastsearch = 2024-07-14 05:19:06
 
 [www.bible.com]
-match = 23.1%%
-title = sawltak 20:22
-url = https://www.bible.com/bible/368/ACT.20.22.TDB
+match = 5.9%%
+title = Matthew 20:22-28 NKJV
+url = https://www.bible.com/bible/114/MAT.20.22-28.NKJV
 
 [mizobibleblog.wordpress.com]
 match = -111.8%%
