--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-07-14 03:30:28
+lastsearch = 2024-07-14 05:19:17
 
 [demxanh.com]
-match = 18.2%%
-title = Thảm trải giường lông cừu TLC 02
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-02.html
+match = 0.0%%
+title = Thảm trải giường cao su non màu ghi
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
 
 [demre.com.vn]
 match = 18.2%%
@@ -17,9 +17,9 @@ title = Thảm ghế thảm giường - Trang 4
 url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=created-desc&page=4
 
 [thegioidemonline.vn]
-match = -50.0%%
-title = Thảm trải giường lông cừu TLC04 giá rẻ - Hà Nội
-url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc-04.html
+match = -45.5%%
+title = Thảm trải giường lông cừu giá rẻ TLC07 - Hà Nội
+url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc07.html
 
 [noithatkenli.vn]
 match = -27.3%%
@@ -57,8 +57,8 @@ title = ++| A M V - Member Profile: carot22
 url = https://www.animemusicvideos.org/members/members_myprofile.php?user_id=1222186
 
 [jysk.vn]
-match = -72.7%%
-title = Kích thước giường ngủ tiêu chuẩn và thông dụng ...
+match = -118.2%%
+title = Kích thước giường ngủ tiêu chuẩn và thông dụng nhất hiện nay
 url = https://jysk.vn/kich-thuoc-giuong-ngu
 
 [anawood.vn]
