--- a/images/tham-nhung-bali-160x230/config.ini
+++ b/images/tham-nhung-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-160x230.html
 lastopen = 2024-06-07 00:35:43
 
 [search]
-lastsearch = 2024-07-14 03:27:42
+lastsearch = 2024-07-14 05:16:48
 
 [demxanh.com]
 match = 0.0%%
@@ -12,19 +12,19 @@ title = Thảm trải sàn Bali siêu khuyến mại
 url = https://demxanh.com/tham-trai-san-bali.html
 
 [www.lazada.vn]
-match = -78.3%%
-title = Thảm Trải Sàn 100%% Nhập Khẩu Cao Cấp, Sang Trọng ...
-url = https://www.lazada.vn/products/mua-tham-nhan-qua-tham-li-bali-tham-trai-san-100-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-i1557438611-s6573104309.html
+match = -100.0%%
+title = [Mua Thảm Nhận Quà] Thảm Lì Bali - Thảm Trải Sàn 100%% Nhập ...
+url = https://www.lazada.vn/products/mua-tham-nhan-qua-tham-li-bali-tham-trai-san-100-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-i1557438611-s9524797002.html?from_gmc=1&fl_tag=1
 
 [tiki.vn]
-match = -60.9%%
-title = Thảm trải sàn bali cao cấp kích thước 160*230cm màu 08
-url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-mau-08-p33115723.html
+match = -73.9%%
+title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm mã 31
+url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-ma-31-p38118824.html?spid=56906252
 
 [thegioidemviet.vn]
-match = -104.3%%
-title = Thảm trải sàn Bali M1 cao cấp, giá tốt nhất trên thị trường
-url = https://thegioidemviet.vn/tham-trai-san-bali-m1/
+match = -65.2%%
+title = Thảm trải sàn Bali M6 hàng cao cấp, mẫu mã đa dạng
+url = https://thegioidemviet.vn/tham-trai-san-bali-m6/
 
 [www.diepxuan.com]
 match = 100.0%%
