--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-14 04:28:52
+lastsearch = 2024-07-14 05:31:32
 
 [www.instagram.com]
-match = -323.1%%
-title = Instagram video by Chan Dior Sunshade • Jun 2, 2024 at 8:35 ...
-url = https://www.instagram.com/reel/C7vRnd7gLPB/
+match = -376.9%%
+title = som1aej 🌌🎉 AEJ Team宠粉福利Giveaway! 🎉🌌 我们将送出 ...
+url = https://www.instagram.com/chan.h.yee.98/p/C21XGIDJZVE/
 
 [hk.linkedin.com]
 match = -100.0%%
@@ -224,7 +224,7 @@ url = https://www.blue17.co.uk/vintage-blog/midcentury-models-renee-breton/
 [shopee.vn]
 match = -176.9%%
 title = chăn ga dior giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chăn ga dior&urlold=chan-ga-lua-thuong-hieu-dior/990638083154560956/343220106741734172/
+url = https://shopee.vn/search?keyword=chăn ga dior&urlold=chan-ga-lua-thuong-hieu-dior/990638083154560956/343220106741734172/ 
 
 [hongkongfp.com]
 match = -269.2%%
