--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-14 03:52:12
+lastsearch = 2024-07-14 05:36:10
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -67,9 +67,9 @@ title = Một ngày ở làng dệt chiếu lác Long Cang, Cần Đước
 url = https://baolongan.vn/mot-ngay-o-lang-det-chieu-lac-long-cang-can-duoc-a5230.html
 
 [www.youtube.com]
-match = -187.5%%
-title = Nuôi thuỷ sản mùa nóng: Bí quyết tránh thất bại | VTC16
-url = https://www.youtube.com/watch?v=9eVWzfQu9Uo
+match = -237.5%%
+title = SỐC: Thương lái ôm tiền tỷ biến mất, người nuôi tôm khóc hết ...
+url = https://www.youtube.com/watch?v=1RKUOd84ucQ
 
 [books.google.com]
 match = -150.0%%
@@ -445,4 +445,9 @@ url = https://thitruongtaichinh.kinhtedothi.vn/chung-khoan/chung-khoan-127-thi-t
 match = -12.5%%
 title = Subaru Forester 2.0i-L
 url = https://subaruminhthanh.com.vn/forester-2-0i-l.html
+
+[www.ediblebrooklyn.com]
+match = 0.0%%
+title = The Peru Less Traveled
+url = https://www.ediblebrooklyn.com/2019/the-peru-less-traveled/
 
