--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-14 04:32:56
+lastsearch = 2024-07-14 05:33:17
 
 [quizlet.com]
 match = -170.0%%
@@ -52,9 +52,9 @@ title = List of acupuncture points
 url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 
 [books.google.com]
-match = -430.0%%
-title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlerHJopc&sig=ACfU3U38on_CKBa9j_AfyQ4SOBVB1PhSqQ&hl=en&sa=X&ved=2ahUKEwjb76zq-6SHAxUqL1kFHWylA7MQ6AF6BAgUEAM
+match = -280.0%%
+title = The Letter to Ren An and Sima Qian’s Legacy
+url = https://books.google.com/books?id=eCnvCwAAQBAJ&pg=PA170&lpg=PA170&dq=man+ren+16&source=bl&ots=0fshSUjz2e&sig=ACfU3U1MP1j2njEIEw3p0P5aZb9foHV44Q&hl=en&sa=X&ved=2ahUKEwjIyuioiaWHAxXcm4kEHb0wAVsQ6AF6BAgWEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
