--- a/images/man-tu-bung-dinh-vuong18/config.ini
+++ b/images/man-tu-bung-dinh-vuong18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong18.html
 lastopen = 2024-06-07 00:52:24
 
 [search]
-lastsearch = 2024-07-14 04:44:51
+lastsearch = 2024-07-14 05:32:44
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Mùng Tự Bung Đỉnh Vuông 1m8 x 2m Viền Chân
 url = https://www.mungbaobao.com/mung-tu-bung-dinh-vuong-1m8-x-2m-bao-bao.html
 
 [shopee.vn]
-match = -29.2%%
-title = màn chụp vuông giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=màn chụp vuông
+match = -54.2%%
+title = Màn chụp vuông - Giá Tốt, Sale Tháng 07, Ship 0 Đồng
+url = https://shopee.vn/list/màn chụp/vuông
 
 [easydream.vn]
 match = -4.2%%
@@ -120,4 +120,9 @@ url = https://baobinhdinh.vn/viewer.aspx?macm=24&macmp=24&mabb=280057
 match = -8.3%%
 title = Màn Chụp Tự Bung Đỉnh Vuông Cao Cấp - Vinmart365
 url = https://vinmart365.com/san-pham/man-chup-tu-bung-dinh-vuong-hang-cao-cap/
+
+[www.upecotourism.in]
+match = -16.7%%
+title = Official Website of UP Ecotourism
+url = https://www.upecotourism.in/?CASINO=भगत सिंह डायलॉग
 
