--- a/images/vo-goi-epm20065-45x65/config.ini
+++ b/images/vo-goi-epm20065-45x65/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-epm20065-45x65.html
 lastopen = 2024-07-07 18:08:23
 
 [search]
-lastsearch = 2024-07-14 02:52:39
+lastsearch = 2024-07-14 05:34:46
 
 [www.diepxuan.com]
-match = -19.0%%
-title = Vỏ gối kê WarmDream 45x65 HQ - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-ke-warmdream-45x65-hq.html
+match = 23.8%%
+title = Điệp Xuân Vỏ gối EP1727 45x65
+url = https://www.diepxuan.com/vo-goi-ep1727-45x65.html
 
 [tiki.vn]
 match = -81.0%%
@@ -22,9 +22,9 @@ title = Giảm giá Vỏ gối 45x65 EVERON chính hãng thêu dây leo ...
 url = https://muathongminh.vn/vo-goi-everon-45-x-65-cm-ko-kem-ruot-p.1__3862161698__114265811
 
 [www.everonqb.com]
-match = -47.6%%
-title = Vỏ gối EPM21065 45x65 - Everon Quảng Bình Trang Chủ
-url = https://www.everonqb.com/vo-goi-epm21065-45x65.html
+match = -19.0%%
+title = Everon Quảng Bình Vỏ gối TRAINS 45x65
+url = https://www.everonqb.com/vo-goi-trains-45x65.html
 
 [mho.vn]
 match = -9.5%%
