CI images update

--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-14 02:47:05
+lastsearch = 2024-07-14 05:52:24
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/South_China_Sea
 [books.google.com]
 match = -104.3%%
 title = The Rough Guide to Vietnam - Page 104 - Google Books Result
-url = https://books.google.com/books?id=JzNGTqatBaIC&pg=PA104&lpg=PA104&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=TdrUdTG4DX&sig=ACfU3U1wIbZP2ROWgAIRzAKBW-9otsY9ag&hl=en&sa=X&ved=2ahUKEwjSwvKV5KSHAxXtFlkFHXAuDZ0Q6AF6BAgiEAM
+url = https://books.google.com/books?id=JzNGTqatBaIC&pg=PA104&lpg=PA104&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=TdrUdUH5FV&sig=ACfU3U2kBbPDMC3EZoXQKMxnPZ6gGrRiag&hl=en&sa=X&ved=2ahUKEwiCjdfLjaWHAxXmFFkFHXxbAEwQ6AF6BAgiEAM
 
 [www.travelweekly.com]
 match = -56.5%%
