--- a/images/chieu-lac-90x100/config.ini
+++ b/images/chieu-lac-90x100/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-90x100.html
 lastopen = 2024-06-20 22:28:06
 
 [search]
-lastsearch = 2024-07-13 23:47:40
+lastsearch = 2024-07-14 05:48:25
 
 [anlacphat.com]
 match = -118.8%%
@@ -47,8 +47,8 @@ title = Hộp chống tĩnh điện
 url = https://qtetech.com/hop-chong-tinh-dien
 
 [www.lazada.vn]
-match = -12.5%%
-title = Chiếu Lác May Giá Tốt T07/2024
+match = -137.5%%
+title = Chiếu Lác May Giá Tốt T07/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/chieu-lac-may/
 
 [vi.made-in-china.com]
