--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-14 04:50:36
+lastsearch = 2024-07-14 05:47:17
 
 [batdongsan.com.vn]
 match = -200.0%%
@@ -17,9 +17,9 @@ title = Kéo cắt tôn dày 1.0mm BESSEY D208, lưỡi cong ...
 url = https://vinatools.com/keo-cat-ton-d208/
 
 [shopvnb.com]
-match = -166.7%%
-title = Danh Sách Các Sân Cầu Lông Ở Bình Thạnh Mới Nhất
-url = https://shopvnb.com/danh-sach-cac-san-cau-long-o-binh-thanh-moi-nhat.html
+match = -173.3%%
+title = Top 8 sân cầu lông Gò Vấp chất lượng năm 2024 ...
+url = https://shopvnb.com/danh-sach-cac-san-cau-long-go-vap-nam-2020-cac-long-thu-da-biet-chua-.html
 
 [m.facebook.com]
 match = -60.0%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Chiếu lác D2 08
 url = https://www.diepxuan.com/chieu-lac-d2-08.html
 
 [www.facebook.com]
-match = -86.7%%
-title = PHOTOTIMEVietnam | Ho Chi Minh City
-url = https://www.facebook.com/phototimevn/
+match = -133.3%%
+title = Sân nhà cung các hoạt động khác diễn ra tại
+url = https://www.facebook.com/photo.php?fbid=742934241290442&id=100067216177900&set=a.505581898359012
 
 [lacvietauction.vn]
 match = -80.0%%
@@ -112,8 +112,8 @@ title = Bánh xe đu quay sáng tạo chuyển động vĩnh cửu con lắc ...
 url = https://tiki.vn/banh-xe-du-quay-sang-tao-chuyen-dong-vinh-cuu-con-lac-newton-p168229177.html
 
 [vishipel.com.vn]
-match = -260.0%%
-title = Về việc thiết lập mới phao báo hiệu hàng hải chuyên dùng “D1” ...
+match = -226.7%%
+title = Về việc thiết lập mới phao báo hiệu hàng hải chuyên dùng ...
 url = https://vishipel.com.vn/ve-viec-thiet-lap-moi-phao-bao-hieu-hang-hai-chuyen-dung-d1-d2-gioi-han-khu-vuc-thi-cong-cong-trinh-nha-may-dien-gio-ca-mau-1d.htm
 
 [www.victoriavn.com]
