--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-07-14 01:48:02
+lastsearch = 2024-07-14 05:44:52
 
 [gobearcats.com]
 match = -142.1%%
@@ -132,9 +132,9 @@ title = licensed-electricians.pdf
 url = https://home.nyc.gov/assets/buildings/pdf/licensed-electricians.pdf
 
 [profiles.ucsd.edu]
-match = -21.4%%
-title = Kathleen Fisch
-url = https://profiles.ucsd.edu/kathleen.fisch
+match = -100.0%%
+title = Minya Pu
+url = https://profiles.ucsd.edu/minya.pu
 
 [som.cuanschutz.edu]
 match = -121.1%%
@@ -337,9 +337,9 @@ title =
 url = https://www.prepscholar.com/sat/s/colleges/UC-Davis-admission-requirements
 
 [evstamps.hibid.com]
-match = -121.1%%
-title = Frank Sinatra & Shirley Temple 1940s Advertising F
-url = https://evstamps.hibid.com/lot/193551109
+match = -152.6%%
+title = Lot # : 30 - Confederate States Stamps Cover #7 Single use
+url = https://evstamps.hibid.com/lot/187490381
 
 [ltg.gov.vi]
 match = -168.4%%
