--- a/images/chieu-gap-dai-loan-16/config.ini
+++ b/images/chieu-gap-dai-loan-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-16.html
 lastopen = 2024-06-09 21:46:43
 
 [search]
-lastsearch = 2024-07-14 04:17:26
+lastsearch = 2024-07-14 06:18:10
 
 [www.diepxuan.com]
 match = 19.0%%
@@ -22,9 +22,9 @@ title = Đài Loan vớt 16 thi thể, nghi toàn người Việt trong đườn
 url = https://www.voatiengviet.com/a/7026996.html
 
 [www.youtube.com]
-match = -128.6%%
-title = Lồng Tiếng | CHỊU THUA TRƯỚC EM - Tập 16 | Trọn Bộ Phim ...
-url = https://www.youtube.com/watch?v=Ieb3ZcvtGyI
+match = -152.4%%
+title = Đài Loan vớt 16 thi thể, nghi toàn người Việt trong đường dây ...
+url = https://www.youtube.com/watch?v=4_-h9nSZjzI
 
 [m.facebook.com]
 match = -95.2%%
@@ -87,9 +87,9 @@ title = Top 10 Rạp chiếu phim ở Đài Bắc - Tripadvisor
 url = https://www.tripadvisor.com.vn/Attractions-g293913-Activities-c56-t97-Taipei.html
 
 [www.facebook.com]
-match = -100.0%%
-title = Trấn Thành - Lịch chiếu MAI ở Đài Loan nha!!! Cả nhà cập...
-url = https://www.facebook.com/tran.thanh.ne/posts/lịch-chiếu-mai-ở-đài-loan-nha-cả-nhà-cập-nhật-để-đi-xem-cho-dễ-ạh-ra-rạp-thôi-đà/1026713498818919/
+match = -95.2%%
+title = Cứ 1000 người ra đường tại Đài Loan, bạn có thể gặp 16 ...
+url = https://www.facebook.com/photo.php?fbid=6895761690441812&id=1459003740784328&set=a.1796931070324925
 
 [cau-ca.com]
 match = -42.9%%
@@ -142,9 +142,9 @@ title = Lịch chiếu
 url = https://chieuphimquocgia.com.vn/movies
 
 [vnexpress.net]
-match = -100.0%%
-title = Tiêm kích F-16 Đài Loan rơi - Tin tức mới nhất 24h qua
-url = https://vnexpress.net/tag/tiem-kich-f-16-dai-loan-roi-1020827
+match = -95.2%%
+title = Loạt tiêm kích F-16 hiện đại nhất Đài Loan bị hỏng do ...
+url = https://vnexpress.net/loat-tiem-kich-f-16-hien-dai-nhat-dai-loan-bi-hong-do-dong-dat-4730265.html
 
 [vietsuntravel.com]
 match = -28.6%%
