--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-07-14 05:48:58
+lastsearch = 2024-07-14 06:13:02
 
 [everon.online]
 match = -12.0%%
@@ -12,9 +12,9 @@ title = Bộ Chăn Ga Gối Bốn Mùa Everon ESM21012 ...
 url = https://everon.online/products/bo-chan-ga-bon-mua-everon-esm21012
 
 [everonchinhhang.vn]
-match = -12.0%%
-title = Bộ ga chun chần Freesia bốn mùa - Everon
-url = https://everonchinhhang.vn/products/bo-ga-chun-chan-freesia-bon-mua
+match = -32.0%%
+title = Bộ chăn bốn mùa Dòng Thời Gian - EPT24081 - Everon
+url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept24081
 
 [everonvn.com.vn]
 match = 28.0%%
@@ -48,8 +48,8 @@ url = https://tuoitre.vn/an-do-xay-tuong-cao-nhat-the-gioi-577749.htm
 
 [batdongsan.com.vn]
 match = -64.0%%
-title = Mua bán căn hộ chung cư tại Xã Phú Tân, Thành phố Sóc ...
-url = https://batdongsan.com.vn/ban-can-ho-chung-cu-xa-phu-tan/gia-thuong-luong-dt-tu-150m2-den-200m2-2pn
+title = Bán căn hộ chung cư tại Đường 129, , Huyện Thăng Bình ...
+url = https://batdongsan.com.vn/ban-can-ho-chung-cu-duong-129-516/dt-tu-50m2-den-80m2-1pn
 
 [www.youtube.com]
 match = -20.0%%
@@ -152,9 +152,9 @@ title = Mẹ già U70 cõng con trai cao 1,82m suốt 5 năm, cố tập cho ...
 url = https://vietbao.vn/me-gia-u70-cong-con-trai-cao-1-82m-suot-5-nam-co-tap-cho-con-di-bo-491194.html
 
 [m.facebook.com]
-match = -76.0%%
-title = E bán căn hộ 182m nhà P Ciputra đã sửa đẹp, view sân golf
-url = https://m.facebook.com/groups/batdongsanhanoimoi/posts/3770409389882861/
+match = -24.0%%
+title = GROUP MUA BÁN CHO THUÊ CĂN HỘ CHUNG CƯ CAO ...
+url = https://m.facebook.com/groups/113376572654593/posts/1439462820045955/
 
 [dantri.com.vn]
 match = -60.0%%
