--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-07-14 05:34:03
+lastsearch = 2024-07-14 06:17:59
 
 [changagoidemsonghong.com]
-match = -12.5%%
-title = Bộ chăn ga gối Sông Hồng dòng Basic mã mầu BC16
-url = https://changagoidemsonghong.com/chan-ga-goi-bc16
+match = 4.2%%
+title = Chăn ga gối classic cotton mã C16-C38
+url = https://changagoidemsonghong.com/chan-ga-goi-cotton-c16-c38
 
 [www.diepxuan.com]
 match = -58.3%%
@@ -42,9 +42,9 @@ title = Bộ chăn ga gối Sông Hồng H16 043 ga chun
 url = https://songhonghanoi.vn/bo-chan-ga-goi-song-hong-h16043-ga-chun.html
 
 [cuahangchangagoidem.com]
-match = -33.3%%
-title = Những Bộ Chăn Ga Gối Đệm Cao Cấp Sang Trọng Quý Phái
-url = https://cuahangchangagoidem.com/bo-chan-ga-goi-dem-cao-cap/
+match = -41.7%%
+title = Cửa Hàng Chăn Ga Gối Đệm Nhập Hàng Tận Xưởng Giá Tốt
+url = https://cuahangchangagoidem.com/cua-hang-chan-ga-goi-dem/
 
 [tiki.vn]
 match = 0.0%%
@@ -77,9 +77,9 @@ title = Các mẫu chăn ga gối đệm đẹp và đáng mua nhất hiện nay
 url = https://ru9.vn/blogs/magazine/cac-mau-chan-ga-goi-dem
 
 [shopee.vn]
-match = -62.5%%
-title = bộ chăn ga gối màu xanh lá giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=bộ chăn ga gối màu xanh lá&urlold=bo-chan-ga-goi-cottong-tim-no-mau-xanh-la-cay-chan-chan-bong-1m2x2m-them-vo-goi-om/950738970322120554/2642071820174507179/
+match = -33.3%%
+title = bộ vỏ chăn ga gối giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=bộ vỏ chăn ga gối
 
 [demxanh.com]
 match = -8.3%%
@@ -122,9 +122,9 @@ title = Bộ chăn ga gối đệm giá rẻ đẹp nhất 2024 hiện nay
 url = https://changagoidem.co/
 
 [gagoinem.com]
-match = -79.2%%
-title = Chăn Ga Gối Giá Rẻ Số 1 tại Hồ Chí Minh và trên toàn quốc
-url = https://gagoinem.com/chan-ga-goi-gia-re-tai-ho-chi-minh/
+match = 8.3%%
+title = Bộ Ga Gối Thun Lạnh Hàn Quốc – M16
+url = https://gagoinem.com/danh-muc-san-pham/bo-ga-goi-thun-lanh-han-quoc-m16/
 
 [dodungnoithat.vn]
 match = -58.3%%
