--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-14 05:47:17
+lastsearch = 2024-07-14 06:14:52
 
 [batdongsan.com.vn]
 match = -200.0%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Chiếu lác D2 08
 url = https://www.diepxuan.com/chieu-lac-d2-08.html
 
 [www.facebook.com]
-match = -133.3%%
-title = Sân nhà cung các hoạt động khác diễn ra tại
-url = https://www.facebook.com/photo.php?fbid=742934241290442&id=100067216177900&set=a.505581898359012
+match = -86.7%%
+title = PHOTOTIMEVietnam | Ho Chi Minh City
+url = https://www.facebook.com/phototimevn/
 
 [lacvietauction.vn]
 match = -80.0%%
@@ -112,8 +112,8 @@ title = Bánh xe đu quay sáng tạo chuyển động vĩnh cửu con lắc ...
 url = https://tiki.vn/banh-xe-du-quay-sang-tao-chuyen-dong-vinh-cuu-con-lac-newton-p168229177.html
 
 [vishipel.com.vn]
-match = -226.7%%
-title = Về việc thiết lập mới phao báo hiệu hàng hải chuyên dùng ...
+match = -260.0%%
+title = Về việc thiết lập mới phao báo hiệu hàng hải chuyên dùng “D1” ...
 url = https://vishipel.com.vn/ve-viec-thiet-lap-moi-phao-bao-hieu-hang-hai-chuyen-dung-d1-d2-gioi-han-khu-vuc-thi-cong-cong-trinh-nha-may-dien-gio-ca-mau-1d.htm
 
 [www.victoriavn.com]
