--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-14 05:36:10
+lastsearch = 2024-07-14 06:18:19
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -72,9 +72,9 @@ title = SỐC: Thương lái ôm tiền tỷ biến mất, người nuôi tôm k
 url = https://www.youtube.com/watch?v=1RKUOd84ucQ
 
 [books.google.com]
-match = -150.0%%
-title = American Soap Journal and Manufacturing Chemist
-url = https://books.google.com/books?id=EF1YAAAAYAAJ&pg=RA1-PA99&lpg=RA1-PA99&dq=chieu+lac+soc+16&source=bl&ots=sI9DkGbyw3&sig=ACfU3U2fWoR1vqvjevIdok_6N909-tAm9A&hl=en&sa=X&ved=2ahUKEwj-1tqV16SHAxW0M1kFHU4JBAkQ6AF6BAgfEAM
+match = -143.8%%
+title = Chiến sĩ Cộng Hòa - Page 19 - Google Books Result
+url = https://books.google.com/books?id=X2clAAAAMAAJ&pg=RA9-PA19&lpg=RA9-PA19&dq=chieu+lac+soc+16&source=bl&ots=p30PZE5-Ip&sig=ACfU3U1xOL6oYt0YbVrzxm1vaWz5n7fXRg&hl=en&sa=X&ved=2ahUKEwjk9Kqxk6WHAxVSDTQIHYgZDOYQ6AF6BAglEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
