--- a/images/nem-dreamland-uc-180x200x14/config.ini
+++ b/images/nem-dreamland-uc-180x200x14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-dreamland-uc-180x200x14.html
 lastopen = 2024-06-06 16:44:35
 
 [search]
-lastsearch = 2024-07-14 03:52:01
+lastsearch = 2024-07-14 06:16:37
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,9 +22,9 @@ title = So far so good.. just concerned with the gel, over time.
 url = https://www.amazon.com/portal/customer-reviews/mobile-media-feed/B01N2UDS59?physicalId=61gnxFQ1kLL&imageExtension=jpg&reviewId=R3IPB6FJOG69LM
 
 [forum.mattressunderground.com]
-match = -63.0%%
-title = Pulled the trigger today and purchased the Dreamfoam ...
-url = https://forum.mattressunderground.com/t/pulled-the-trigger-today-and-purchased-the-dreamfoam-ultimate-dreams-13inch-gel-memory-foam/6902
+match = -18.5%%
+title = Review of the Ultimate Dreams mattress
+url = https://forum.mattressunderground.com/t/review-of-the-ultimate-dreams-mattress/616
 
 [www.instagram.com]
 match = -88.9%%
