--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-07-13 21:45:31
+lastsearch = 2024-07-14 06:19:38
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -74,7 +74,7 @@ url = https://www.uc.edu/about/financial-aid/starting/apply.html
 [pubmed.ncbi.nlm.nih.gov]
 match = -180.0%%
 title = Polygenic risk modeling for prediction of epithelial ovarian ...
-url = https://pubmed.ncbi.nlm.nih.gov/35314806/
+url = https://pubmed.ncbi.nlm.nih.gov/35027648/
 
 [escholarship.org]
 match = -33.3%%
@@ -187,9 +187,9 @@ title = Flight Number - Airborne Sensor Facility - NASA
 url = https://asapdata.arc.nasa.gov/sensors/fsrs/94152_fsr.pdf
 
 [profiles.ucsd.edu]
-match = -63.6%%
-title = Sameer Shah
-url = https://profiles.ucsd.edu/sameer.shah
+match = -41.7%%
+title = Jack Gilbert
+url = https://profiles.ucsd.edu/jack.gilbert
 
 [profiles.ucdavis.edu]
 match = 0.0%%
