CI images update

--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-07-14 06:17:59
+lastsearch = 2024-07-14 06:28:59
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -92,9 +92,9 @@ title = Mẫu 16 - Chăn Ga Gối Đệm Benlinda Hải Phòng
 url = https://changagoibenlinda.com/mau-16
 
 [bochangagoi.vn]
-match = 25.0%%
-title = Chăn ga gối HQ38
-url = https://bochangagoi.vn/bo-chan-ga-goi-hq38/
+match = -70.8%%
+title = Bộ chăn ga gối OZ Bedding - Top 5 mẫu chăn ga gối cao cấp ...
+url = https://bochangagoi.vn/
 
 [ninhouse.vn]
 match = -75.0%%
