--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-07-14 06:15:03
+lastsearch = 2024-07-14 06:27:02
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -17,9 +17,9 @@ title = Identification of 12 new susceptibility loci for different ...
 url = https://pubmed.ncbi.nlm.nih.gov/28346442/
 
 [www.dir.ca.gov]
-match = -126.3%%
-title = Workers' Compensation Appeals Board - Panel decisions
-url = https://www.dir.ca.gov/wcab/wcab-Decisions.htm
+match = -21.1%%
+title = ADDITIONAL CASE INFORMATION
+url = https://www.dir.ca.gov/dwc/sb1160-ab1244/Consolidation-Notice-First-Hearing/Garcia-Additional-Cases-Info.pdf
 
 [profiles.ucsf.edu]
 match = -7.7%%
@@ -27,9 +27,9 @@ title = Li Zhang, PhD
 url = https://profiles.ucsf.edu/li.zhang
 
 [www.ncbi.nlm.nih.gov]
-match = -168.4%%
-title = Review of influenza-associated pulmonary aspergillosis in ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7306567/
+match = -157.9%%
+title = Amplification-free detection of SARS-CoV-2 with CRISPR ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7834310/
 
 [www.lebow.drexel.edu]
 match = -126.3%%
@@ -37,9 +37,9 @@ title = Shawkat Hammoudeh, PhD - LeBow College of Business
 url = https://www.lebow.drexel.edu/people/shawkathammoudeh
 
 [profiles.ucsd.edu]
-match = -10.5%%
-title = Gary Vilke - UCSD Profiles
-url = https://profiles.ucsd.edu/gary.vilke
+match = -100.0%%
+title = Minya Pu
+url = https://profiles.ucsd.edu/minya.pu
 
 [medboard.nv.gov]
 match = -100.0%%
@@ -92,9 +92,9 @@ title = CURRICULUM VITAE
 url = https://www.polyu.edu.hk/cee/~cehklam/
 
 [www.west-cs.com]
-match = -110.5%%
-title = KS 98-1 Multi-function unit Engineering manual
-url = https://www.west-cs.com/assets/Manuals/KS-98-ManualFull_9499-040-82711.pdf
+match = -94.7%%
+title = KS 98-1 Multifunction-unit operating manual
+url = https://www.west-cs.com/assets/Manuals/KS-98-1-Manual.pdf
 
 [www.nyc.gov]
 match = -26.3%%
@@ -232,9 +232,9 @@ title = Stanbury Physician-Scientist Pathway Resident Profiles
 url = https://www.massgeneral.org/medicine/internal-medicine/education/residency/standbury-residents
 
 [medschool.uci.edu]
-match = -14.3%%
-title = William H Yong
-url = https://medschool.uci.edu/about/faculty/yongwh
+match = -21.4%%
+title = Jefferson Chan
+url = https://medschool.uci.edu/about/faculty/jchan
 
 [nepp.nasa.gov]
 match = -47.4%%
@@ -325,4 +325,9 @@ url = http://www.pittasa.com/little-profiles
 match = -110.5%%
 title = HAPPY GRADUATION DAY TO OUR AMAZING SENIORS!!!!!
 url = https://www.instagram.com/p/C6SFe02u4bb/
+
+[gladstone.org]
+match = 0.0%%
+title = Katie Pollard, PhD
+url = https://gladstone.org/people/katie-pollard
 
