--- a/images/chieu-nhua-ha-noi-10/config.ini
+++ b/images/chieu-nhua-ha-noi-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-10.html
 lastopen = 2024-06-09 23:36:00
 
 [search]
-lastsearch = 2024-07-14 04:13:48
+lastsearch = 2024-07-14 06:28:03
 
 [www.maihuyencorp.com]
 match = -85.0%%
@@ -17,9 +17,9 @@ title = Chiếu nhựa - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
 url = https://shopee.vn/list/chiếu/nhựa
 
 [tchome.vn]
-match = 20.0%%
-title = CHIẾU NHỰA HÀ NỘI 1 MÉT 2 - TC-HOME
-url = https://tchome.vn/gia-dung-doi-song-chan-chieukhoacoc-chen/chieu-nhua-ha-noi-1-met-2-sp22544.html
+match = 35.0%%
+title = CHIẾU NHỰA HÀ NỘI 1,8m - TC-HOME
+url = https://tchome.vn/gia-dung-doi-song-chan-chieukhoacoc-chen/chieu-nhua-ha-noi-18m-sp22546.html
 
 [tandaiphong.com.vn]
 match = 46.7%%
@@ -42,19 +42,19 @@ title = Chiếu Nhựa Bền Đẹp, Giá Sốc, Bán Chạy Nhất
 url = https://www.sendo.vn/chieu-nhua.htm
 
 [www.facebook.com]
-match = 63.2%%
-title = Chiếu Nhựa Thái Lan
-url = https://www.facebook.com/chieunhuathailan/
+match = -20.0%%
+title = Chiếu nhựa ( đơn + gấp) Made in Viêt Nam
+url = https://www.facebook.com/media/set/?set=a.774846209209040.1073741830.763563843670610&type=3
 
 [www.diepxuan.com]
 match = 15.0%%
-title = Chiếu nhựa Hà Nội 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-150x190.html
+title = Chiếu nhựa Hà Nội 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-180x200.html
 
 [www.lazada.vn]
-match = 10.0%%
-title = Chiếu Nhựa Chiếu Nhựa Hà Nội (1m8x4m)
-url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-ha-noi-1m8x4m-i1122564765-s3960456155.html
+match = -85.0%%
+title = Chiếu Nhựa Mai Huyền Hà Nội 1,5m , 1,6m , 1m8,1m8x3m ...
+url = https://www.lazada.vn/products/chieu-nhua-mai-huyen-ha-noi-15m-16m-1m81m8x3m-1m8x4m-i1969285387.html
 
 [thuanloitrading.com]
 match = 10.0%%
@@ -75,4 +75,14 @@ url = https://h5.lazada.vn/products/chieu-nhua-mai-huyen-ha-noi-kich-thuoc-1m5-1
 match = -95.0%%
 title = Chiếu Nhựa | Chiếu Nhựa Thái Lan | Mua Chiếu ở Hà Nội ...
 url = http://chieuvietbac.blogspot.com/
+
+[www.hotdeal.vn]
+match = 50.0%%
+title = Chiếu Nhựa Cỡ Đại Hà Nội
+url = https://www.hotdeal.vn/ha-noi/do-dung-gia-dinh-nha-cua-doi-song/chieu-nhua-co-dai-49931.html
+
+[denchieusangre.com]
+match = -10.0%%
+title = Báo giá dây thít nhựa tại Hà Nội
+url = http://denchieusangre.com/Day-thit-nhua/Bao-gia-day-thit-nhua-tai-Ha-Noi.htm
 
