--- a/images/vo-goi-epm20065-45x65/config.ini
+++ b/images/vo-goi-epm20065-45x65/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-epm20065-45x65.html
 lastopen = 2024-07-07 18:08:23
 
 [search]
-lastsearch = 2024-07-14 05:34:46
+lastsearch = 2024-07-14 06:26:17
 
 [www.diepxuan.com]
-match = 23.8%%
-title = Điệp Xuân Vỏ gối EP1727 45x65
-url = https://www.diepxuan.com/vo-goi-ep1727-45x65.html
+match = -19.0%%
+title = Vỏ gối kê WarmDream 45x65 HQ - Điệp Xuân
+url = https://www.diepxuan.com/vo-goi-ke-warmdream-45x65-hq.html
 
 [tiki.vn]
 match = -81.0%%
@@ -22,9 +22,9 @@ title = Giảm giá Vỏ gối 45x65 EVERON chính hãng thêu dây leo ...
 url = https://muathongminh.vn/vo-goi-everon-45-x-65-cm-ko-kem-ruot-p.1__3862161698__114265811
 
 [www.everonqb.com]
-match = -19.0%%
-title = Everon Quảng Bình Vỏ gối TRAINS 45x65
-url = https://www.everonqb.com/vo-goi-trains-45x65.html
+match = -47.6%%
+title = Vỏ gối EPM21065 45x65 - Everon Quảng Bình Trang Chủ
+url = https://www.everonqb.com/vo-goi-epm21065-45x65.html
 
 [mho.vn]
 match = -9.5%%
@@ -60,4 +60,9 @@ url = https://priuschat.com/threads/just-started-prolong-reconditioning.222147/p
 match = -18.8%%
 title = Thread: VRO pump
 url = https://www.bbcboards.net/showthread.php?t=624706
+
+[www.macheforum.com]
+match = -147.6%%
+title = Looking for an actual PICTURE of the HV Battery Contactors?
+url = https://www.macheforum.com/site/threads/looking-for-an-actual-picture-of-the-hv-battery-contactors.19114/page-2
 
