CI images update

--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-07-14 05:51:31
+lastsearch = 2024-07-14 06:52:14
 
 [shopee.vn]
-match = -4.2%%
-title = Thảm lau chân LEN MỊN thấm hút tốt KHỔ 40*60cm
-url = https://shopee.vn/Thảm-lau-chân-LEN-MỊN-thấm-hút-tốt-KHỔ-40*60cm-i.11468657.7058301396
+match = -25.0%%
+title = Thảm Chùi Chân Lông Xù Loang Đế Chống Trượt ...
+url = https://shopee.vn/Thảm-Chùi-Chân-Lông-Xù-Loang-Đế-Chống-Trượt-Combani-Kích-Thước-40x60-i.191529566.21231533396
 
 [lepetit.com.vn]
 match = -66.7%%
@@ -85,4 +85,9 @@ url = https://latiendadeljardin.com/vi/felpudos/felpudo-40x60-cm-welcome-negro.h
 match = -62.5%%
 title = Thảm chùi chân phòng tắm CHỐNG TRƯỢT, lau chân mềm ...
 url = https://sieuthinguyenkim.com/tham-chui-chan-phong-tam-chong-nsh10311217225.html
+
+[huyenikea.com]
+match = -4.2%%
+title = Thảm lau chân phòng tắm phòng khách 40*60cm
+url = https://huyenikea.com/products/tham-lau-chan-phong-tam-phong-khach-40-60cm-2
 
