--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-07-14 04:30:09
+lastsearch = 2024-07-14 06:45:29
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -42,9 +42,9 @@ title = Ho Chi Minh ZIP code - The most updated ...
 url = https://phaata.com/en/zip-code/ho-chi-minh-zip-code-1309.html
 
 [www.youtube.com]
-match = -243.8%%
-title = Dự báo thời tiết hôm nay và ngày mai 14/5 | Dự báo thời tiết ...
-url = https://www.youtube.com/watch?v=xqd5G5akECU
+match = -187.5%%
+title = Thánh Lễ Chúa Nhật Tuần XV Mùa Thường Niên năm B, 14 ...
+url = https://www.youtube.com/watch?v=jWPllT5Or7Y
 
 [vietbis.vn]
 match = -193.8%%
