--- a/images/tham-chui-chan-khachdada-45x80360g/config.ini
+++ b/images/tham-chui-chan-khachdada-45x80360g/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chui-chan-khachdada-45x80360g.html
 lastopen = 2024-06-07 00:35:49
 
 [search]
-lastsearch = 2024-07-14 06:34:35
+lastsearch = 2024-07-14 06:49:21
 
 [www.diepxuan.com]
 match = 97.1%%
@@ -12,7 +12,17 @@ title = Thảm chùi chân kháchdada 45x80.360g
 url = https://www.diepxuan.com/tham-chui-chan-khachdada-45x80360g.html
 
 [m.facebook.com]
-match = -64.7%%
-title = Cheryl Chan 陈慧玲 - A date with our seniors at East Coast...
-url = https://m.facebook.com/story.php/?story_fbid=759038826032931&id=100057804619631
+match = -52.9%%
+title = Cheryl Chan 陈慧玲 - 10June was Hawkers' Appreciation ...
+url = https://m.facebook.com/story.php/?story_fbid=680111640592317&id=100057804619631
+
+[www.facebook.com]
+match = -55.9%%
+title = Cheryl Chan 陈慧玲 - Sharing festive joy and care with our...
+url = https://www.facebook.com/story.php/?story_fbid=757542172849263&id=100057804619631
+
+[www.instagram.com]
+match = -23.5%%
+title = 𝑪𝒉𝒂𝒏 𝒄𝒉𝒖🦋 | #💜สินค้าปลอดภัย .... Like comment and shere
+url = https://www.instagram.com/ll.chanchu_mukhi.ll/p/C2ZRqyqpg6N/
 
