--- a/images/chieu-lac-d2-09/config.ini
+++ b/images/chieu-lac-d2-09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-09.html
 lastopen = 2024-06-21 06:29:43
 
 [search]
-lastsearch = 2024-07-14 06:53:10
+lastsearch = 2024-07-14 09:14:12
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = LOA SADA D209 RGB ĐEN
 url = https://lacdau.com/loa-sada-d-209-21-led-rgb-bass-sieu-tram-den
 
 [batdongsan.com.vn]
-match = -140.0%%
-title = Mua Bán Đất đường D2, Quận 9 Giá Rẻ T7/2024
-url = https://batdongsan.com.vn/ban-dat-duong-d2-61
+match = -200.0%%
+title = Mua Bán Đất Nền Dự Án đường D2, Quận 9 Giá Rẻ T7/2024
+url = https://batdongsan.com.vn/ban-dat-nen-du-an-duong-d2-61
 
 [visaforkorea-vt.com]
 match = -113.3%%
@@ -172,8 +172,8 @@ title = Đồ Chơi Bắc Hà
 url = https://dochoibacha.com/
 
 [www.vietnamairport.vn]
-match = -240.0%%
-title = Sơ đồ nhà ga - Tổng công ty cảng hàng không Việt Nam ...
+match = -213.3%%
+title = Sơ đồ nhà ga - Tổng công ty cảng hàng không Việt ...
 url = https://www.vietnamairport.vn/tansonnhatairport/tin-tuc/thong-tin-dich-vu/so-do-nha-ga-2
 
 [www.victoriavn.com]
