--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-07-14 06:17:25
+lastsearch = 2024-07-14 09:21:57
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -12,9 +12,9 @@ title = Chiếu nhựa Hà Nội du lịch 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-180x200.html
 
 [shopee.vn]
-match = 35.7%%
-title = Chiếu nhựa loại đẹp Hà Nội, chiếu ...
-url = https://shopee.vn/Chiếu-nhựa-loại-đẹp-Hà-Nội-chiếu-nhựa-chiếu-nhựa-gấp-gọn-chiếu-ngủ-văn-phòng-du-lịch-dã-ngoại-i.26647481.24652949365
+match = -14.3%%
+title = chiếu cói gấp xuân hòa 15m giá tốt Tháng 7, 2024
+url = https://shopee.vn/search?keyword=chiếu cói gấp xuân hòa 15m
 
 [tiki.vn]
 match = -21.4%%
@@ -37,9 +37,9 @@ title = LỊCH HỘI CHỢ VÀ TRIỂN LÃM THƯƠNG MẠI TẠI HÀ NỘI ...
 url = https://tradepro.vn/vi/hoi-cho-trien-lam/ha-noi
 
 [www.sendo.vn]
-match = 42.9%%
-title = chiếu nhựa thái 1m8x3m - sp 66677
-url = https://www.sendo.vn/chieu-nhua-thai-1m8x3m-37120771.html
+match = -25.0%%
+title = Chiếu nhựa gấp gọn size 4m, 3m chiếu ăn cơm hàng đẹp ...
+url = https://www.sendo.vn/chieu-nhua-gap-gon-size-4m-3m-chieu-an-com-hang-dep-nhieu-mau-109448350.html
 
 [mia.vn]
 match = -39.3%%
