--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-14 06:15:12
+lastsearch = 2024-07-14 09:19:46
 
 [www.georgianicols.com]
 match = -69.2%%
@@ -32,9 +32,9 @@ title = Japanese spider crab
 url = https://en.wikipedia.org/wiki/Japanese_spider_crab
 
 [www.facebook.com]
-match = 0.0%%
-title = Sylvia Gani
-url = https://www.facebook.com/sylviagani/
+match = -61.5%%
+title = Northwest Georgia Scanner
+url = https://www.facebook.com/NWGAScanner/
 
 [www.youtube.com]
 match = -323.1%%
@@ -460,4 +460,9 @@ url = https://www.vikinggroupinc.com/databook/Old/Sprinkler1/080788sep2001.pdf
 match = 0.0%%
 title = 
 url = https://jaehakim.substack.com/p/silenced-is-a-brutal-look-at-child-abuse/comments
+
+[books.google.com]
+match = -123.1%%
+title = Handbook of American Indian Languages
+url = https://books.google.com/books?id=oZYoAAAAQBAJ&pg=PA419&lpg=PA419&dq=ga+ni+long+16&source=bl&ots=6okB6wzMK_&sig=ACfU3U2dCUIybU8QYe6fgy8oiZ9mGmAWtQ&hl=en&sa=X&ved=2ahUKEwjaqtT4u6WHAxUrFjQIHSKPCw0Q6AF6BAgoEAM
 
