--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-clfi/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-clfi/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-clfi.html
 lastopen = 2024-06-06 17:09:48
 
 [search]
-lastsearch = 2024-07-14 06:19:17
+lastsearch = 2024-07-14 09:19:13
 
 [www.everonvn.vn]
 match = 29.6%%
@@ -37,9 +37,9 @@ title = Amazon.com: Customer Questions & Answers
 url = https://www.amazon.com/ask/questions/Tx16RF6LC863W2F/?source=allQuestionsPage
 
 [forum.mattressunderground.com]
-match = 14.6%%
-title = Differentiating between King Koil mattresses
-url = https://forum.mattressunderground.com/t/mattress-search-differentiating-between-king-koil-mattresses/12812
+match = -31.7%%
+title = Closest better alternative that compares to these big brand ...
+url = https://forum.mattressunderground.com/t/closest-better-alternative-that-compares-to-these-big-brand-specs/13794
 
 [www.lencoheaven.net]
 match = -4.9%%
