--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-14 06:31:32
+lastsearch = 2024-07-14 09:15:38
 
 [www.tui.co.uk]
-match = 0.0%%
-title = Buy South Korean won
-url = https://www.tui.co.uk/travel-money/buy-south-korean-won/
+match = -33.3%%
+title = Holiday Types 2024/25
+url = https://www.tui.co.uk/holidays
 
 [uk.trip.com]
 match = -233.3%%
@@ -307,9 +307,9 @@ title = Tui cancels Spain holidays after government's quarantine ...
 url = https://sg.news.yahoo.com/tui-cancels-holidays-to-spain-after-governments-quarantine-u-turn-093745446.html
 
 [shopee.vn]
-match = -33.3%%
-title = TÚI RÚT TỔNG HƠP KOREA
-url = https://shopee.vn/TÚI-RÚT-TỔNG-HƠP-KOREA-i.53569870.7886364952
+match = -191.7%%
+title = Túi xách nữ KOREA size lớn da bò cao cấp TX68
+url = https://shopee.vn/search?keyword=Túi xách nữ KOREA size lớn da bò cao cấp TX68
 
 [juliahuyserdesign.com]
 match = 41.7%%
