--- a/images/tui-warmdream-15/config.ini
+++ b/images/tui-warmdream-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-15.html
 lastopen = 2024-06-10 00:24:28
 
 [search]
-lastsearch = 2024-07-14 06:50:46
+lastsearch = 2024-07-14 09:14:33
 
 [www.lazada.vn]
 match = -268.8%%
@@ -22,9 +22,9 @@ title = [ F4 THAILAND ] Warm Dream - EP.6 - NovelToon
 url = https://noveltoon.vn/vi/watch/1965107/7048058
 
 [www.tiktok.com]
-match = -75.0%%
-title = As Warm As Fire Final Episode Ending
-url = https://www.tiktok.com/discover/as-warm-as-fire-final-episode-ending
+match = -156.2%%
+title = Gloss for life - #beautytok - #hudabeauty - #lip
+url = https://www.tiktok.com/@hudabeauty/video/7343640145192684842
 
 [eastcoastbeddingusa.com]
 match = -125.0%%
