CI images update

--- a/images/chieu-gap-dai-loan-16/config.ini
+++ b/images/chieu-gap-dai-loan-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-16.html
 lastopen = 2024-06-09 21:46:43
 
 [search]
-lastsearch = 2024-07-14 09:58:56
+lastsearch = 2024-07-14 10:24:06
 
 [www.diepxuan.com]
 match = 19.0%%
@@ -142,9 +142,9 @@ title = Lịch chiếu
 url = https://chieuphimquocgia.com.vn/movies
 
 [vnexpress.net]
-match = -95.2%%
-title = Loạt tiêm kích F-16 hiện đại nhất Đài Loan bị hỏng do ...
-url = https://vnexpress.net/loat-tiem-kich-f-16-hien-dai-nhat-dai-loan-bi-hong-do-dong-dat-4730265.html
+match = -100.0%%
+title = Tiêm kích F-16 Đài Loan rơi - Tin tức mới nhất 24h qua
+url = https://vnexpress.net/tag/tiem-kich-f-16-dai-loan-roi-1020827
 
 [vietsuntravel.com]
 match = -28.6%%
