--- a/images/chieu-lac-soc-10/config.ini
+++ b/images/chieu-lac-soc-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-10.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-14 03:46:20
+lastsearch = 2024-07-14 10:15:54
 
 [www.chieulongdinh.com.vn]
 match = -93.8%%
@@ -87,9 +87,9 @@ title = Làng “chiếu ma” Định yên
 url = https://vietnam.vnanet.vn/vietnamese/long-form/lang-chieu-ma-dinh-yen-353536.html
 
 [baomoi.com]
-match = -87.5%%
-title = Khám phá làng nghề dệt chiếu lác ở Long An
-url = https://baomoi.com/kham-pha-lang-nghe-det-chieu-lac-o-long-an-c48038158.epi
+match = -168.8%%
+title = Nóp cỏ bàng và chiếu lác - Tạp chí Văn Hóa & Phát Triển
+url = https://baomoi.com/nop-co-bang-va-chieu-lac-c40335029.epi
 
 [books.google.com]
 match = -212.5%%
