--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-14 09:17:15
+lastsearch = 2024-07-14 10:22:59
 
 [demxanh.com]
 match = -10.7%%
@@ -12,9 +12,9 @@ title = Bộ ga chun Cotton chống thấm màu xanh dương
 url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-duong.html
 
 [www.diepxuan.com]
-match = -3.6%%
-title = Bộ chun chần WarmDream 180x200 lụa - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html
+match = 25.0%%
+title = Ga phủ ESM20013 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/ga-phu-esm20013-180x200.html
 
 [mgaleg.maryland.gov]
 match = -75.0%%
@@ -152,9 +152,9 @@ title = News Staley Farms Private Golf Community Kansas City MO
 url = http://www.staleyfarmshomeskc.com/docs/news-frame.asp?title=Here Is Staley Farms Golf Community In Beautiful North Kansas ...&page=https://xn----ctbbfhtdwrbb1ale.xn--p1ai/9618573etpm-internationalcomafe88y
 
 [www.lebguide.com]
-match = -39.3%%
-title = Bijou brigitte singen [pwi1Ak] - LebGuide.com
-url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn--80aaaahh3adsifyi7eva6j.xn--p1ai/3687591wwwroottopc4fe43y
+match = 3.6%%
+title = Hotels in Lebanon - LebGuide.com
+url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn--b1aadcebcueff0c6d7d.xn--p1ai/6879521dpafbso02-04tpay8comc4fe43y
 
 [news.google.it]
 match = -3.6%%
