--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-14 09:55:12
+lastsearch = 2024-07-14 10:20:03
 
 [www.georgianicols.com]
 match = -69.2%%
@@ -42,9 +42,9 @@ title = Our New Friend, Gani (30 mins) l Episode 9 l Tayo the Little Bus
 url = https://www.youtube.com/watch?v=8L7o3sc3crI
 
 [www.regmovies.com]
-match = -215.4%%
-title = Regal Hollywood @ North I-85 Movie Tickets and ...
-url = https://www.regmovies.com/theatres/regal-hollywood-north-i-85-0745
+match = -223.1%%
+title = Regal Hollywood - Gainesville Movie Tickets and ...
+url = https://www.regmovies.com/theatres/regal-hollywood-cinemas-gainesville-1421
 
 [dds.georgia.gov]
 match = -284.6%%
@@ -369,7 +369,7 @@ url = https://eur-lex.europa.eu/legal-content/DA/TXT/PDF/?uri=OJ:C_202402547
 [www.google.com]
 match = 0.0%%
 title = Google Maps
-url = https://www.google.com/maps/dir/
+url = https://www.google.com/maps/?q=,
 
 [data.census.gov]
 match = -38.5%%
