--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-14 04:45:55
+lastsearch = 2024-07-14 10:24:15
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -12,9 +12,9 @@ title =
 url = https://www.rockawayinc.com/hoa/2024-new-florida-hoa-laws/
 
 [www.justanswer.com]
-match = -205.9%%
-title = If an HOA in state does not enforce its rules for a certain ...
-url = https://www.justanswer.com/real-estate-law/mdrrw-hoa-state-does-not-enforce-its-rules-certain.html
+match = -188.2%%
+title = Florida HOA Ch 720. I am aware there is a 14 day notice ...
+url = https://www.justanswer.com/law/axy44-florida-hoa-ch-720-aware-14-day-notice.html
 
 [www.nixonpeabody.com]
 match = -182.4%%
@@ -24,7 +24,7 @@ url = https://www.nixonpeabody.com/insights/alerts/2024/05/08/do-hoas-have-to-re
 [www.flsenate.gov]
 match = -129.4%%
 title = Chapter 720 Section 303 - 2018 Florida Statutes
-url = https://www.flsenate.gov/laws/statutes/2018/720.303
+url = https://www.flsenate.gov/Laws/Statutes/2018/0720.303
 
 [www.doorloop.com]
 match = 0.0%%
