--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,16 +4,16 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-14 09:15:38
+lastsearch = 2024-07-14 10:21:55
 
 [www.tui.co.uk]
-match = -33.3%%
-title = Holiday Types 2024/25
-url = https://www.tui.co.uk/holidays
+match = -250.0%%
+title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
+url = https://www.tui.co.uk/
 
 [uk.trip.com]
-match = -233.3%%
-title = Book Cheap TUI Airways Limited Flights to Seoul
+match = 0.0%%
+title = 
 url = https://uk.trip.com/flights/airline-by/thomson-airways-limited-flight-to-sel/
 
 [www.diepxuan.com]
@@ -42,9 +42,9 @@ title = TUI commands logging??? - Forums
 url = https://www.cfd-online.com/Forums/fluent/45792-tui-commands-logging.html
 
 [www.reddit.com]
-match = -266.7%%
-title = WHY IS THERE A TUI FLY BELGIUM FLYING FROM MSP ...
-url = https://www.reddit.com/r/flightradar24/comments/1bz1844/why_is_there_a_tui_fly_belgium_flying_from_msp_to/
+match = -333.3%%
+title = TUI Fly Belgium 737 flying in North America? : r/flightradar24
+url = https://www.reddit.com/r/flightradar24/comments/19daoc4/tui_fly_belgium_737_flying_in_north_america/
 
 [www.travelgossip.co.uk]
 match = 0.0%%
@@ -172,9 +172,9 @@ title = Camino Portugues Last 100km: Tui to Santiago in 8 Days
 url = https://www.thenaturaladventure.com/tours/spain/camino-portugues-last-100km-tui-to-santiago-in-8-days/
 
 [www.tripadvisor.com]
-match = -225.0%%
-title = Tui Package - Good value for money and a very ...
-url = https://www.tripadvisor.com/ShowUserReviews-g150812-d574249-r940118347-El_Dorado_Royale-Playa_del_Carmen_Yucatan_Peninsula.html
+match = -275.0%%
+title = TUI customers beware - this is neither 5* nor Premium!
+url = https://www.tripadvisor.com/ShowUserReviews-g499445-d1163247-r941540096-Bahia_Principe_Luxury_Sian_Ka_an-Akumal_Yucatan_Peninsula.html
 
 [menashop.com]
 match = 0.0%%
@@ -325,4 +325,9 @@ url = https://travelweekly.co.uk/news/tour-operators/contiki-unveils-new-itinera
 match = -325.0%%
 title = TUI Airways' New Routes Increases Travel to Paris During ...
 url = https://www.travelandtourworld.com/news/article/tui-airways-new-routes-increases-travel-to-paris-during-olympics-with-26-partner-airlines-contributing-a-boost-in-travel-industry/
+
+[www.dior.com]
+match = -100.0%%
+title = Dior official website | DIOR
+url = https://www.dior.com/
 
