--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-07-14 05:37:34
+lastsearch = 2024-07-14 10:36:24
 
 [shopee.vn]
 match = 25.0%%
@@ -52,9 +52,9 @@ title = Làng nghề dệt chiếu cói Phú Tân
 url = https://mia.vn/cam-nang-du-lich/lang-nghe-det-chieu-coi-phu-tan-lang-nghe-hon-tram-nam-tuoi-tai-phu-yen-2165
 
 [m.facebook.com]
-match = -175.0%%
-title = Sơ lược về làng nghề dệt chiếu tại Long Định - Cần Đước
-url = https://m.facebook.com/notes/cộng-đồng-long-an/sơ-lược-về-làng-nghề-dệt-chiếu-tại-long-định-cần-đước/402374479949088/
+match = 22.2%%
+title = Chieu Lac
+url = https://m.facebook.com/chieu.lac.73/
 
 [baolongan.vn]
 match = -31.2%%
@@ -97,9 +97,9 @@ title = Hệ thống kinh lạc trong cơ thể
 url = https://www.vinmec.com/vi/y-hoc-co-truyen/suc-khoe-thuong-thuc/he-thong-kinh-lac-trong-co/
 
 [books.google.com]
-match = -231.2%%
-title = Tam tu kinh: ou, Le livre des phrases de trois caractères, ...
-url = https://books.google.com/books?id=So8wAAAAYAAJ&pg=RA3-PA14&lpg=RA3-PA14&dq=chieu+lac+soc+12&source=bl&ots=ihPPeX8db0&sig=ACfU3U00dzSeLmN3quSumoYFml8MViFWIw&hl=en&sa=X&ved=2ahUKEwiUlfDts6OHAxUDFlkFHd7CC0YQ6AF6BAghEAM
+match = -150.0%%
+title = Ph_c Truy_n Lu_t L_ Ký (T_p 2: Ph_c Truy_n 12-26)
+url = https://books.google.com/books?id=qpuaDwAAQBAJ&pg=PA338&lpg=PA338&dq=chieu+lac+soc+12&source=bl&ots=oA-sbQW1Tp&sig=ACfU3U0CIlcbxNydewawCfUCMK-F-kq1Kw&hl=en&sa=X&ved=2ahUKEwjfnfmIzaWHAxVdjYkEHTUVBxYQ6AF6BAgjEAM
 
 [baovinhlong.vn]
 match = -137.5%%
