--- a/images/ruot-goi-ke-re/config.ini
+++ b/images/ruot-goi-ke-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-re.html
 lastopen = 2024-06-10 01:04:04
 
 [search]
-lastsearch = 2024-07-14 06:46:47
+lastsearch = 2024-07-14 10:40:45
 
 [www.thanhthuyhanh.com]
 match = 78.6%%
@@ -62,9 +62,9 @@ title = Ruột Chăn, Ruột Gối Ngủ Cao Cấp, Giá Rẻ - JYSK.vn
 url = https://jysk.vn/ruot-chan-goi
 
 [everonvn.com.vn]
-match = -100.0%%
-title = Bảng giá ruột gối Advansa Micro - Everon
-url = https://everonvn.com.vn/everon/140/ruot-goi-advansa-micro
+match = -164.3%%
+title = Bảng Giá Ruột Gối Đầu Everon Chính Hãng Hàn Quốc
+url = https://everonvn.com.vn/5/ruot-goi-everon
 
 [demsonghonghanoi.com]
 match = -235.7%%
@@ -72,9 +72,9 @@ title = Ruột gối Sông Hồng chính hãng giá rẻ nhất thị trường 
 url = https://demsonghonghanoi.com/ruot-goi-song-hong/
 
 [shopee.vn]
-match = -121.4%%
-title = ruột gối giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=ruột gối
+match = -157.1%%
+title = Ruột gối - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/ruột gối
 
 [www.changagoidemeveron.vn]
 match = -78.6%%
