--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-07-14 09:52:16
+lastsearch = 2024-07-14 10:41:38
 
 [everonvn.com.vn]
-match = 0.0%%
-title = Vỏ Gối Everon Giảm Giá Es1366
-url = https://everonvn.com.vn/everon/588/vo-goi-everon-giam-gia-es1366
+match = -11.1%%
+title = Bộ Everon Ep1831 - Curtis
+url = https://everonvn.com.vn/everon/630/bo-everon-ep1831
 
 [www.lazada.vn]
 match = -172.2%%
@@ -32,9 +32,9 @@ title = Lịch sử giá 🥑 Vỏ gối đầu cotton poly 45x65 🥑 áo gối
 url = https://muathongminh.vn/xu-huong-vo-goi-dau-cotton-poly-45x65-ao-goi-nam-nhieu-mau-sac-mau-bo-xam-duoc-chon-mau-p.1__19609304624__137416996
 
 [www.diepxuan.com]
-match = 11.1%%
-title = Điệp Xuân Vỏ gối ES1801 45x65
-url = https://www.diepxuan.com/vo-goi-es1801-45x65.html
+match = -11.1%%
+title = Vỏ gối EPM21063 45x65 - Điệp Xuân
+url = https://www.diepxuan.com/vo-goi-epm21063-45x65.html
 
 [www.everonqb.com]
 match = -38.9%%
@@ -62,7 +62,7 @@ title = Specs for an old Bear Polar Recurve
 url = https://www.archerytalk.com/threads/specs-for-an-old-bear-polar-recurve.2238485/
 
 [www.instagram.com]
-match = -150.0%%
-title = peach honey bear 🍑🍯🧸 | starry night 찬이🐺🌌 teddy ver or ...
-url = https://www.instagram.com/peachhoneybear/p/C56l4vsS49D/
+match = -188.9%%
+title = VintageDeco Bears | Winnie, 17.5 /6.8 inch big, filled with ...
+url = https://www.instagram.com/vdbears/p/C17lcL4okSP/
 
