--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-07-14 05:51:53
+lastsearch = 2024-07-14 10:35:22
 
 [www.lazada.vn]
 match = -166.7%%
@@ -12,9 +12,9 @@ title = Vỏ gối vuông tựa cỡ 45x45cm in sắt nét (Không kèm ruột)
 url = https://www.lazada.vn/products/vo-goi-vuong-tua-co-45x45cm-in-sat-net-khong-kem-ruot-i995000529.html
 
 [shopee.vn]
-match = -140.0%%
-title = Vỏ gối vuông tựa Tây Âu 48cmx48cm vải gấm nhung ...
-url = https://shopee.vn/Vỏ-gối-vuông-tựa-Tây-Âu-48cmx48cm-vải-gấm-nhung-gối-tựa-lưng-sofa-vỏ-gối-ôm-gối-vuông-trang-trí-decor-sang-trọng-i.18055727.2459433258
+match = -180.0%%
+title = Vỏ Gối Vuông Họa Tiết Hoa Độc Đáo Trang Trí Nội Thất ...
+url = https://shopee.vn/Vỏ-Gối-Vuông-Họa-Tiết-Hoa-Độc-Đáo-Trang-Trí-Nội-Thất-Nhà-Ở-i.80205807.5549909412
 
 [jysk.vn]
 match = -166.7%%
@@ -22,14 +22,14 @@ title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
 url = https://jysk.vn/vo-goi-trang-tri
 
 [chus.vn]
-match = 0.0%%
-title = Vỏ Gối Vuông H'mông - Chus.vn
+match = -173.3%%
+title = Vỏ Gối Vuông H'mông, Thổ Cẩm PIÊU - Brocade Decor - CHUS
 url = https://chus.vn/vo-goi-vuong-hmong/
 
 [ninhouse.vn]
-match = -106.7%%
-title = Mua vỏ gối nằm | Áo gối ngủ đẹp giá rẻ ...
-url = https://ninhouse.vn/collections/vo-goi-nam
+match = -126.7%%
+title = Mua Vỏ gối | Áo gối | Bao gối đẹp giá rẻ ...
+url = https://ninhouse.vn/collections/vo-goi
 
 [lepetit.com.vn]
 match = -6.7%%
