--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-14 03:51:01
+lastsearch = 2024-07-14 10:53:01
 
 [www.tiktok.com]
 match = -170.6%%
@@ -69,7 +69,7 @@ url = https://www.pinterest.com/pin/1087971222468991265/
 [books.google.com]
 match = -123.5%%
 title = The army list - Page 463 - Google Books Result
-url = https://books.google.com/books?id=YvANAAAAQAAJ&pg=RA1-PA463&lpg=RA1-PA463&dq=man+in+hoa+dep+16&source=bl&ots=KC67ruQVTF&sig=ACfU3U0bUsqJWmEza5Z-QSvFRpEYmzabHw&hl=en&sa=X&ved=2ahUKEwjuxInW46SHAxXkMVkFHTVBDm4Q6AF6BAgsEAM
+url = https://books.google.com/books?id=YvANAAAAQAAJ&pg=RA1-PA463&lpg=RA1-PA463&dq=man+in+hoa+dep+16&source=bl&ots=KC67snQOSE&sig=ACfU3U3mxGLBdnTXP5xJCWwE7AJ1-V1YWw&hl=en&sa=X&ved=2ahUKEwi3jK_k0KWHAxVtFVkFHT64CH4Q6AF6BAgaEAM
 
 [tax.vermont.gov]
 match = -29.4%%
