--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-07-14 09:19:55
+lastsearch = 2024-07-14 10:47:10
 
 [tiki.vn]
 match = -47.6%%
@@ -12,19 +12,19 @@ title = Chiếu trúc đài loan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu trúc đài loan
 
 [www.facebook.com]
-match = -61.9%%
-title = CÔNG TY XUẤT KHẨU LAO ĐỘNG NHÂN ĐẠT-Kesa. ...
-url = https://www.facebook.com/xkld0987841938/posts/gấp-gấp-gấp-điện-tử-chiếu-mẫn-đào-viên-đài-bắc-cần-nhận-thêm-form-nam-chỉ-nhận-l/1717940138441061/
+match = -104.8%%
+title = CGV Cinemas Vietnam - Sau 4 ngày công chiếu tại Đài ...
+url = https://www.facebook.com/photo.php?fbid=844924327674339&id=100064703379579&set=a.669666201866820
 
 [www.roc-taiwan.org]
-match = -42.9%%
-title = Thủ tục cấp đổi hộ chiếu cho người Đài Loan
-url = https://www.roc-taiwan.org/vn_vi/post/62.html
+match = -19.0%%
+title = THỦ TỤC XIN CẤP ĐỔI HỘ CHIẾU ĐÀI LOAN
+url = https://www.roc-taiwan.org/vnsgn_vi/post/91.html
 
 [www.tiktok.com]
-match = -19.0%%
-title = Cách Xem Lịch Chiếu Film Tại Taiwan
-url = https://www.tiktok.com/discover/cách-xem-lịch-chiếu-film-tại-taiwan?lang=en
+match = -9.5%%
+title = Phim Mai Có Chiếu Ở Taiwan Không
+url = https://www.tiktok.com/discover/phim-mai-có-chiếu-ở-taiwan-không?lang=en
 
 [www.tripadvisor.com.vn]
 match = -42.9%%
