--- a/images/chieu-lac-d2-09/config.ini
+++ b/images/chieu-lac-d2-09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-09.html
 lastopen = 2024-06-21 06:29:43
 
 [search]
-lastsearch = 2024-07-14 10:22:37
+lastsearch = 2024-07-14 10:50:42
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = LOA SADA D209 RGB ĐEN
 url = https://lacdau.com/loa-sada-d-209-21-led-rgb-bass-sieu-tram-den
 
 [batdongsan.com.vn]
-match = -200.0%%
-title = Mua Bán Đất Nền Dự Án đường D2, Quận 9 Giá Rẻ T7/2024
-url = https://batdongsan.com.vn/ban-dat-nen-du-an-duong-d2-61
+match = -140.0%%
+title = Mua Bán Đất đường D2, Quận 9 Giá Rẻ T7/2024
+url = https://batdongsan.com.vn/ban-dat-duong-d2-61
 
 [visaforkorea-vt.com]
 match = -113.3%%
@@ -77,9 +77,9 @@ title = Học cờ vua nâng cao
 url = https://www.cothongminh.com/tai-lieu-hoc-co-vua/26-hoc-co-vua-nang-cao?start=3
 
 [www.facebook.com]
-match = -86.7%%
-title = PHOTOTIMEVietnam | Ho Chi Minh City
-url = https://www.facebook.com/phototimevn/
+match = -13.3%%
+title = Grand Loyal Poker Club
+url = https://www.facebook.com/GrandLoyal/
 
 [duhocdoubleh.edu.vn]
 match = -193.3%%
