--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-14 02:14:47
+lastsearch = 2024-07-14 10:48:05
 
 [screenrant.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Duy Long - Chàng trai xanh lá quyết theo đuổi nữ chính từ ..
 url = https://www.facebook.com/NguoiAyLaAi.VieChannel/videos/duy-long-chàng-trai-xanh-lá-quyết-theo-đuổi-nữ-chính-từ-show-ra-đời-thật-người-ấ/425027899585078/
 
 [www.youtube.com]
-match = -200.0%%
-title = FIX: VIDEO DXGKRNL FATAL ERROR in Windows 10/11 ...
-url = https://www.youtube.com/watch?v=7yEnuxJqQKg
+match = -100.0%%
+title = Resident Evil - Chris 10: New guns!
+url = https://www.youtube.com/watch?v=PeT3ic6LphU
 
 [www.reddit.com]
 match = -64.3%%
@@ -32,8 +32,8 @@ title = Màn chụp giá rẻ
 url = https://demxanh.com/man-chup-gia-re.html
 
 [www.uscis.gov]
-match = -50.0%%
-title = Explore my Options | USCIS
+match = -7.1%%
+title = Explore my Options
 url = https://www.uscis.gov/forms/explore-my-options
 
 [www.evergreenrecreation.com]
@@ -87,9 +87,9 @@ title = Green card
 url = https://en.wikipedia.org/wiki/Green_card
 
 [www.imdb.com]
-match = -92.9%%
-title = Blue Eye Samurai (TV Series 2023)
-url = https://www.imdb.com/title/tt13309742/
+match = 0.0%%
+title = Blue Bayou (2021)
+url = https://www.imdb.com/title/tt11121664/
 
 [www.boundless.com]
 match = -128.6%%
