--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-07-14 08:01:50
+lastsearch = 2024-07-14 10:52:00
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -172,9 +172,9 @@ title = EPA's Reanalysis of Key Issues Related to Dioxin Toxicity and ...
 url = https://cfpub.epa.gov/ncea/iris/iris_documents/documents/supdocs/dioxinv1sup.pdf
 
 [cps-vo.org]
-match = -190.0%%
-title = *** 276 Total Attendees (listed in green) *** | Cyber-Physical ...
-url = https://cps-vo.org/cps-pimtg24/registrants-attendees
+match = -140.0%%
+title = Registrants | Cyber-Physical Systems Virtual Organization
+url = https://cps-vo.org/group/satc-pimtg22/registrants
 
 [backend.daikincomfort.com]
 match = -28.6%%
