--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-07-14 10:41:38
+lastsearch = 2024-07-14 10:51:40
 
 [everonvn.com.vn]
 match = -11.1%%
@@ -32,9 +32,9 @@ title = Lịch sử giá 🥑 Vỏ gối đầu cotton poly 45x65 🥑 áo gối
 url = https://muathongminh.vn/xu-huong-vo-goi-dau-cotton-poly-45x65-ao-goi-nam-nhieu-mau-sac-mau-bo-xam-duoc-chon-mau-p.1__19609304624__137416996
 
 [www.diepxuan.com]
-match = -11.1%%
-title = Vỏ gối EPM21063 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-epm21063-45x65.html
+match = 11.1%%
+title = Điệp Xuân Vỏ gối ES1801 45x65
+url = https://www.diepxuan.com/vo-goi-es1801-45x65.html
 
 [www.everonqb.com]
 match = -38.9%%
