--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-07-14 10:46:59
+lastsearch = 2024-07-14 11:20:33
 
 [demxanh.com]
 match = -84.2%%
@@ -17,8 +17,8 @@ title = Tấm Trang Trí Khách Sạn cao cấp giá tốt nhất Hà Nội
 url = https://thegioidemviet.vn/tam-trang-tri-khach-san/
 
 [vinhtuong.com]
-match = -110.5%%
-title = Tấm thạch cao, Tấm xi măng trang trí Vĩnh Tường DECO Plus
+match = -42.1%%
+title = Tấm trang trí Vĩnh Tường DECO Plus® In Lụa
 url = https://vinhtuong.com/tam-trang-tri-vinh-tuong-deco-plus
 
 [www.vietuchotel.vn]
@@ -42,9 +42,9 @@ title = Hoi An Memories Resort & Spa
 url = https://hoianmemoriesresort.com/
 
 [www.tripadvisor.com.vn]
-match = -94.7%%
-title = 10 Khách sạn Sang trọng nhất tại Úc - Tripadvisor
-url = https://www.tripadvisor.com.vn/Hotels-g255055-zff12-Australia-Hotels.html
+match = -73.7%%
+title = 10 Khách sạn tốt nhất tại Úc - Tripadvisor
+url = https://www.tripadvisor.com.vn/Hotels-g255055-Australia-Hotels.html
 
 [3rvietnam.com.vn]
 match = 0.0%%
@@ -212,8 +212,8 @@ title = Khách sạn ở Sydney từ 432.460 ₫/đêm
 url = https://www.vn.kayak.com/Sydney-Hotels.2258.hotel.ksp
 
 [suongtuyet.com]
-match = -115.8%%
-title = Tấm trang trí giường khách sạn là gì và những điều cần biết?
+match = -105.3%%
+title = Tấm trang trí giường khách sạn là gì và những điều cần ...
 url = https://suongtuyet.com/tam-trang-tri-giuong-khach-san-la-gi-va-nhung-dieu-can-biet.html
 
 [www.staleyfarmshomeskc.com]
