--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-14 10:39:25
+lastsearch = 2024-07-14 11:20:00
 
 [www.instagram.com]
-match = -169.2%%
-title = Embarking on a new journey, @Dior is set ...
-url = https://www.instagram.com/hashtag_legend/p/C0I6TiRv89q/
+match = -323.1%%
+title = Instagram video by Chan Dior Sunshade • Jun 2, 2024 at 8:35 ...
+url = https://www.instagram.com/reel/C7vRnd7gLPB/
 
 [hk.linkedin.com]
 match = -100.0%%
