--- a/images/chan-hoi-re-chan-phao/config.ini
+++ b/images/chan-hoi-re-chan-phao/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-re-chan-phao.html
 lastopen = 2024-06-09 22:50:47
 
 [search]
-lastsearch = 2024-07-14 09:14:21
+lastsearch = 2024-07-14 11:18:43
 
 [www.dem365.vn]
 match = -61.9%%
@@ -32,9 +32,9 @@ title = Chăn phao siêu nhẹ giá rẻ, cực ấm vào mùa Đông
 url = https://thegioidemviet.vn/chan-phao-sieu-nhe-gia-re/
 
 [www.youtube.com]
-match = -114.3%%
-title = Tại sao chặn phao cần 4 hạt chặn? Và trải nghiệm thực tế ...
-url = https://www.youtube.com/watch?v=ZjibqQJbDZY
+match = -109.5%%
+title = Câu cá, ưu và nhược điểm của dùng hạt chặn và dùng chỉ ...
+url = https://www.youtube.com/watch?v=47iqz2ImKhc
 
 [www.lazada.vn]
 match = -76.2%%
