--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-07-14 10:36:24
+lastsearch = 2024-07-14 11:22:43
 
 [shopee.vn]
 match = 25.0%%
@@ -97,9 +97,9 @@ title = Hệ thống kinh lạc trong cơ thể
 url = https://www.vinmec.com/vi/y-hoc-co-truyen/suc-khoe-thuong-thuc/he-thong-kinh-lac-trong-co/
 
 [books.google.com]
-match = -150.0%%
-title = Ph_c Truy_n Lu_t L_ Ký (T_p 2: Ph_c Truy_n 12-26)
-url = https://books.google.com/books?id=qpuaDwAAQBAJ&pg=PA338&lpg=PA338&dq=chieu+lac+soc+12&source=bl&ots=oA-sbQW1Tp&sig=ACfU3U0CIlcbxNydewawCfUCMK-F-kq1Kw&hl=en&sa=X&ved=2ahUKEwjfnfmIzaWHAxVdjYkEHTUVBxYQ6AF6BAgjEAM
+match = -231.2%%
+title = Tam tu kinh: ou, Le livre des phrases de trois caractères, ...
+url = https://books.google.com/books?id=So8wAAAAYAAJ&pg=RA3-PA14&lpg=RA3-PA14&dq=chieu+lac+soc+12&source=bl&ots=ihPPfV6g8Z&sig=ACfU3U3H9VRTbAJAU5N5Iznhefs6CfULpA&hl=en&sa=X&ved=2ahUKEwj5wKy216WHAxXUrokEHeZ-C3AQ6AF6BAgfEAM
 
 [baovinhlong.vn]
 match = -137.5%%
