--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-07-14 03:50:47
+lastsearch = 2024-07-14 11:25:28
 
 [burningman.org]
 match = -60.0%%
@@ -154,7 +154,7 @@ url = https://boardofwatersupply.com/appjqsYgH7155
 [steamcommunity.com]
 match = -53.3%%
 title = Cộng đồng Steam :: Dawn of Man
-url = https://steamcommunity.com/app/858810/discussions/search/?l=vietnamese&q=Workload&sort=time&p=196
+url = https://steamcommunity.com/app/858810/discussions/search/?l=vietnamese&q=Workload&sort=time&p=10
 
 [register.fca.org.uk]
 match = -6.7%%
@@ -720,4 +720,9 @@ url = https://publicaccess.courts.state.mn.us/
 match = -213.3%%
 title = G-Star RAW® US | Shop Raw Denim | Summer Sale 2024 ...
 url = https://www.g-star.com/
+
+[azburners.org]
+match = 0.0%%
+title = 
+url = https://azburners.org/the-11-principles/
 
