--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-14 10:34:26
+lastsearch = 2024-07-14 11:20:55
 
 [quizlet.com]
 match = -170.0%%
@@ -62,9 +62,9 @@ title =
 url = https://www.phillyvoice.com/ren-gill-music-mental-health-chronic-illness-/
 
 [www.instagram.com]
-match = -100.0%%
-title = The Ren Men (@the_ren_men)
-url = https://www.instagram.com/the_ren_men/
+match = -320.0%%
+title = MC REN (@realmcren) • Instagram photos and videos
+url = https://www.instagram.com/realmcren/?hl=en
 
 [www.youtube.com]
 match = -170.0%%
@@ -230,4 +230,9 @@ url = https://megamitensei.fandom.com/wiki/Ren_Amamiya
 match = -190.0%%
 title = Chapter 16 (English) - Zhen Men Ren
 url = https://comick.io/comic/zhen-men-ren/NRAoK-chapter-16-en
+
+[www.theepochtimes.com]
+match = -210.0%%
+title = Mysterious Chinese Characters (16): Ren
+url = https://www.theepochtimes.com/article/mysterious-chinese-characters-ren-confucius-1525925
 
