--- a/images/nem-everon-180x200x15-extrafoam/config.ini
+++ b/images/nem-everon-180x200x15-extrafoam/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-everon-180x200x15-extrafoam.html
 lastopen = 2024-06-06 17:10:38
 
 [search]
-lastsearch = 2024-07-14 02:46:00
+lastsearch = 2024-07-14 11:24:21
 
 [www.everonvn.vn]
-match = -38.7%%
-title = Bảng giá các kích thước đệm bông ép Everon vỏ gấm ...
-url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-vo-gam.html
+match = -22.6%%
+title = Bảng giá đệm bông ép Everon 1m8 (1.8m hay 180 x 200)
+url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-1m8.html
 
 [nemgiakho.com]
 match = 54.8%%
@@ -37,9 +37,9 @@ title = ĐỆM BÔNG ÉP EVERON - Akasi
 url = https://akasi.com.vn/san-pham/dem-bong-ep-everon/
 
 [demxanh.com]
-match = 12.9%%
-title = Đệm bông ép Everon EXTRAFOAM chính hãng
-url = https://demxanh.com/dem-bong-ep-everon-extrafoam.html
+match = -19.4%%
+title = Đệm Foam Everon ExtraFoam chính hãng giá rẻ Hà Nội
+url = https://demxanh.com/dem-foam-everon-extrafoam.html
 
 [everon.online]
 match = 0.0%%
@@ -67,9 +67,9 @@ title = Chăn Ga Gối Everon EPC23044
 url = https://thegioinem.com/chan-ga-goi-everon-epc23044.html
 
 [tongdailyeveron.com.vn]
-match = 0.0%%
-title = ĐỆM NEW EXTRA FOAM
-url = https://tongdailyeveron.com.vn/products/dem-new-extra-foam
+match = -3.2%%
+title = Đệm đa năng EVERON (nệm trải sàn, tấm trải đệm)
+url = https://tongdailyeveron.com.vn/products/dem-da-nang-everon-nem-trai-san-tam-trai-dem
 
 [shopee.vn]
 match = 6.5%%
