CI images update

--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-14 04:17:06
+lastsearch = 2024-07-14 11:37:49
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
-match = -187.5%%
-title = Cuộc Hội Ngộ Đẫm Nước Mắt Sau 32 Năm Thất Lạc, Nhưng ...
-url = https://www.youtube.com/watch?v=H89SgE1w6Eo
+match = -225.0%%
+title = "Nằm lòng" những bí quyết chăm sóc gà con để đạt hiệu suất ...
+url = https://www.youtube.com/watch?v=GXtm3fLo-jA
 
 [hawater.com.vn]
 match = -75.0%%
@@ -57,9 +57,9 @@ title = Con lắc đơn gồm sợi dây có chiều dài 1,63 m và quả cầu
 url = https://tuyensinh247.com/bai-tap-618536.html
 
 [www.thegioididong.com]
-match = -212.5%%
-title = Top điện thoại chơi game tốt, mượt nhất 2024 từ 4 đến 20 ...
-url = https://www.thegioididong.com/game-app/top-20-dien-thoai-choi-game-tot-nhat-2021-ban-nen-mua-1321221
+match = -193.8%%
+title = Top 16 game Idle trên điện thoại Android, iOS hay nhất
+url = https://www.thegioididong.com/game-app/top-16-game-idle-tren-dien-thoai-android-ios-hay-nhat-khong-the-bo-1334353
 
 [vnexpress.net]
 match = -131.2%%
@@ -67,9 +67,9 @@ title = Cảnh sát 'bó tay' vì không thể phạt xe tự lái
 url = https://vnexpress.net/canh-sat-bo-tay-vi-khong-the-phat-xe-tu-lai-4766348.html
 
 [laodong.vn]
-match = -200.0%%
-title = Nóng Sài Gòn: Công an mời tài xế ôtô đánh tới tấp nam ...
-url = https://laodong.vn/video-xa-hoi/nong-sai-gon-cong-an-moi-tai-xe-oto-danh-toi-tap-nam-thanh-nien-truoc-nha-1365367.ldo
+match = -206.2%%
+title = Vụ xe khách bị vùi lấp ở Hà Giang: Số người chết là 11 do ...
+url = https://laodong.vn/xa-hoi/vu-xe-khach-bi-vui-lap-o-ha-giang-so-nguoi-chet-la-11-do-1-nguoi-xuong-doc-duong-truoc-tai-nan-1366032.ldo
 
 [olm.vn]
 match = -143.8%%
@@ -92,9 +92,9 @@ title = Chợ ma – dấu ấn nghề chiếu
 url = https://baotang.dongthap.gov.vn/di-san-van-hoa/cho-ma-dau-an-nghe-chieu-37.html
 
 [sv.ut.edu.vn]
-match = -125.0%%
-title = mega88 slot game–Apps on Google Play964.91.4
-url = https://sv.ut.edu.vn/newscowtl1.html
+match = -75.0%%
+title = luật poker omaha-App Store5.93.517
+url = https://sv.ut.edu.vn/newsr4ru7ie5.html
 
 [yamaha-motor.com.vn]
 match = -250.0%%
@@ -127,9 +127,9 @@ title = 2024 0625 69vn|ba sòng bạc hàng đầu châu á - AptoideV3.1.4
 url = https://www.sjcallahabad.org/tig/2024-0625-69vn.phtml
 
 [znews.vn]
-match = -200.0%%
-title = VTV kiểm duyệt nghiêm ngặt hình ảnh show hẹn hò 'Đảo ...
-url = https://znews.vn/vtv-kiem-duyet-nghiem-ngat-hinh-anh-show-hen-ho-dao-thien-duong-post1484370.html
+match = -212.5%%
+title = Xe phân khối lớn tông xe máy chạy ngược chiều, 2 mẹ con ...
+url = https://znews.vn/xe-phan-khoi-lon-tong-xe-may-chay-nguoc-chieu-2-me-con-tu-vong-post1485832.html
 
 [primagold.com.vn]
 match = -225.0%%
@@ -152,9 +152,9 @@ title = lịch thi đấu sea games 32 ngày 16 tháng 05
 url = https://caodangtkv.edu.vn/Xsn/20240615-77kfuhesoi kèo tài xỉu việt nam malaysia.html
 
 [www.facebook.com]
-match = -218.8%%
-title = 🔴 Bản tin trưa 13/7/2024 | VTC1 | Bản tin trưa 13/7/2024 ...
-url = https://www.facebook.com/vtc1tintuc/videos/-bản-tin-trưa-1372024-vtc1/1143044220138649/
+match = 7.1%%
+title = Cuối Giờ Chiều
+url = https://www.facebook.com/cuoigiochieu/
 
 [suckhoedoisong.vn]
 match = -212.5%%
