--- a/images/chan-4-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-4-k-tuyet-sin-thai-lan/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-4-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:17:35
 
 [search]
-lastsearch = 2024-07-14 06:48:02
+lastsearch = 2024-07-14 11:37:37
 
 [shopee.vn]
-match = 0.0%%
-title = CHĂN LÔNG TUYẾT SỊN THÁI LAN 3KG HAI LỚP IN HOA ...
-url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-SỊN-THÁI-LAN-3KG-HAI-LỚP-IN-HOA-CAO-CẤP-i.169744499.6052072833
+match = -11.1%%
+title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung, ...
+url = https://shopee.vn/-CHUYÊN-SỈ-🌺-chăn-băng-lông-tuyết-nhung-chăn-Tuyết-Sin-Thái-Lan-cho-mùa-đông-ấm-áp-loại-3kg-4kg-5kg-i.81313558.18665110405
 
 [www.lazada.vn]
-match = -22.2%%
-title = Chăn Nhung 4kg Giá Tốt T06/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chan-nhung-4kg/
+match = 7.4%%
+title = Mền Lông Tuyết Thái Giá Tốt T07/2024
+url = https://www.lazada.vn/tag/men-long-tuyet-thai/
 
 [tiki.vn]
 match = -18.5%%
@@ -82,9 +82,9 @@ title = Cơn địa chấn trên chính trường Thái Lan?
 url = https://baomoi.com/con-dia-chan-tren-chinh-truong-thai-lan-c49397042.epi
 
 [www.nguoi-viet.com]
-match = -59.3%%
-title = Thiếu sót nếu không ghé Yellowstone National Park khi ...
-url = https://www.nguoi-viet.com/doi-song/thieu-sot-neu-khong-ghe-yellowstone-national-park-khi-den-my/
+match = -55.6%%
+title = Đại Hội Thánh Mẫu ngày một lớn mạnh và thu hút nhiều ...
+url = https://www.nguoi-viet.com/little-saigon/dai-hoi-thanh-mau-ngay-mot-lon-manh-va-thu-hut-nhieu-nguoi-hon/
 
 [ninhouse.vn]
 match = 37.5%%
