--- a/images/nem-foam-dreamland-uc-160x200x20/config.ini
+++ b/images/nem-foam-dreamland-uc-160x200x20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-foam-dreamland-uc-160x200x20.html
 lastopen = 2024-06-07 00:23:34
 
 [search]
-lastsearch = 2024-07-14 06:45:51
+lastsearch = 2024-07-14 11:42:28
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,9 +22,9 @@ title = Đệm Memory Foam Massage Kawaii Dreamland
 url = https://shopee.vn/Đệm-Memory-Foam-Massage-Kawaii-Dreamland-Nệm-Công-Thái-Học-Công-Nghệ-Japan-i.1090783225.24251489307
 
 [demxanh.com]
-match = -6.2%%
-title = Đệm bông ép Dreamland giá rẻ, chính hãng tại Hà Nội
-url = https://demxanh.com/dem-bong-ep-dreamland.html
+match = 6.2%%
+title = Đệm bông ép Dreamland chống thoái hóa cột sống
+url = https://demxanh.com/dem-bong-ep-dreamland-chong-thoai-hoa-cot-song.html
 
 [www.youtube.com]
 match = -12.5%%
