--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-07-14 10:51:51
+lastsearch = 2024-07-14 11:41:35
 
 [www.diepxuan.com]
-match = 40.9%%
-title = Thảm giường nỉ 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
+match = 36.4%%
+title = Điệp Xuân Thảm giường nỉ 200x220
+url = https://www.diepxuan.com/tham-giuong-ni-200x220.html
 
 [demxanh.com]
 match = 0.0%%
