CI images update

--- a/images/chieu-gap-thai-binh-3m/config.ini
+++ b/images/chieu-gap-thai-binh-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-thai-binh-3m.html
 lastopen = 2024-06-09 22:36:42
 
 [search]
-lastsearch = 2024-07-14 05:52:35
+lastsearch = 2024-07-14 11:50:04
 
 [shopee.vn]
 match = -90.9%%
@@ -145,4 +145,9 @@ url = https://kinhtexaydung.gov.vn/wp-content/uploads/2020/12/CV_1064-CBG-T6-202
 match = 13.6%%
 title = Chiếu gấp Thái Bình 180x400 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-gap-thai-binh-180x400.html
+
+[hungnamphat.com.vn]
+match = 36.4%%
+title = Giường Nệm Xếp Thái Bình
+url = https://hungnamphat.com.vn/giuong-nem-xep-thai-binh/
 
