--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-07-14 11:35:57
+lastsearch = 2024-07-14 11:49:28
 
 [everon.online]
 match = -12.0%%
@@ -12,9 +12,9 @@ title = Bộ Chăn Ga Gối Bốn Mùa Everon ESM21012 ...
 url = https://everon.online/products/bo-chan-ga-bon-mua-everon-esm21012
 
 [everonchinhhang.vn]
-match = -12.0%%
-title = Bộ ga chun chần Freesia bốn mùa - Everon
-url = https://everonchinhhang.vn/products/bo-ga-chun-chan-freesia-bon-mua
+match = -32.0%%
+title = Bộ chăn bốn mùa Dòng Thời Gian - EPT24081 - Everon
+url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept24081
 
 [everonvn.com.vn]
 match = 28.0%%
@@ -152,9 +152,9 @@ title = Mẹ già U70 cõng con trai cao 1,82m suốt 5 năm, cố tập cho ...
 url = https://vietbao.vn/me-gia-u70-cong-con-trai-cao-1-82m-suot-5-nam-co-tap-cho-con-di-bo-491194.html
 
 [m.facebook.com]
-match = -76.0%%
-title = E bán căn hộ 182m nhà P Ciputra đã sửa đẹp, view sân golf
-url = https://m.facebook.com/groups/batdongsanhanoimoi/posts/3770409389882861/
+match = -44.0%%
+title = Em có căn hộ 3PN-2WC ở tòa Goldmark City ( ...
+url = https://m.facebook.com/groups/113376572654593/posts/1439434073382163/
 
 [dantri.com.vn]
 match = -60.0%%
