--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-14 11:20:55
+lastsearch = 2024-07-14 11:53:25
 
 [quizlet.com]
 match = -170.0%%
@@ -52,9 +52,9 @@ title = List of acupuncture points
 url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 
 [books.google.com]
-match = -440.0%%
-title = The Monasteries of the Wadi 'n Natrûn: The history of the ...
-url = https://books.google.com/books?id=_mIPAQAAMAAJ&pg=PA206&lpg=PA206&dq=man+ren+16&source=bl&ots=HlovFj52EX&sig=ACfU3U1QXO80yrv_8T0V5N2eWRONCiPG3g&hl=en&sa=X&ved=2ahUKEwjmuP7QzKWHAxUwhIkEHSSpB-UQ6AF6BAgUEAM
+match = -430.0%%
+title = Proceedings of the 10th West Coast Conference on Formal ...
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlerKFtib&sig=ACfU3U13-bZIUNx5p8Md0aS_cT-WUUb6vQ&hl=en&sa=X&ved=2ahUKEwiOic2k3qWHAxUqHUQIHQ3GDrAQ6AF6BAgTEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
