--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-14 05:19:06
+lastsearch = 2024-07-14 11:54:12
 
 [www.bible.com]
-match = 5.9%%
-title = Matthew 20:22-28 NKJV
-url = https://www.bible.com/bible/114/MAT.20.22-28.NKJV
+match = -88.2%%
+title = LUKA 22 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/LUK.22.MIZCLBSI
 
 [mizobibleblog.wordpress.com]
 match = -111.8%%
@@ -47,9 +47,9 @@ title = Air Fittings & Tubing
 url = https://www.smcpneumatics.com/pdfs/smc/70AIFITTINGS.pdf
 
 [www.bibleref.com]
-match = 0.0%%
-title = 
-url = https://www.bibleref.com/Mark/2/Mark-2-22.html
+match = -23.5%%
+title = What does Matthew 20:22 mean?
+url = https://www.bibleref.com/Matthew/20/Matthew-20-22.html
 
 [www.youtube.com]
 match = -217.6%%
