--- a/images/nem-everon-140x200x9/config.ini
+++ b/images/nem-everon-140x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-140x200x9.html
 lastopen = 2024-06-06 17:10:12
 
 [search]
-lastsearch = 2024-07-14 11:23:28
+lastsearch = 2024-07-14 11:48:34
 
 [www.everonvn.vn]
 match = -120.0%%
@@ -22,9 +22,9 @@ title = Tổng Đại Lý Chăn Ga Gối Đệm Everon Artemis King Koil
 url = https://everon.online/collections/dem-everon-kich-thuoc-1m4-140-190-140-200-140x190-140x200
 
 [elec-horeca.com]
-match = -15.0%%
-title = Chăn ga gối đệm everon tại Đà Nẵng
-url = https://elec-horeca.com/chan-ga-goi-dem-everon-tai-da-nang-id277.html
+match = 10.0%%
+title = Đại Lý Nệm Everon tại Đà Nẵng
+url = https://elec-horeca.com/dai-ly-nem-everon-tai-da-nang-id279.html
 
 [tiki.vn]
 match = -20.0%%
@@ -105,4 +105,9 @@ url = https://thegioinem.com/nem-everon
 match = -110.0%%
 title = EVERON - A Bad Example - Neuss, Germany, Dec 06, 1991
 url = https://www.youtube.com/watch?v=KrvocPGYQbM
+
+[everonkorea.com]
+match = -5.0%%
+title = Chăn ga gối đệm Everon - Hà Nội
+url = https://everonkorea.com/everon/
 
