--- a/images/tham-giuong-bo-de-15/config.ini
+++ b/images/tham-giuong-bo-de-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-15.html
 lastopen = 2024-06-07 00:36:08
 
 [search]
-lastsearch = 2024-07-14 11:42:17
+lastsearch = 2024-07-14 11:47:09
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Thảm giường bo đê 15
 url = https://www.diepxuan.com/tham-giuong-bo-de-15.html
 
 [shopee.vn]
-match = -105.0%%
-title = Giường xếp - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/giường xếp
+match = -95.0%%
+title = Bộ Drap 4 món Ga giường thun lạnh HQ [ NỆM CAO 15- ...
+url = https://shopee.vn/Bộ-Drap-4-món-Ga-giường-thun-lạnh-HQ-NỆM-CAO-15-25CM-gồm-1-ga-2-vỏ-nằm-1-vỏ-ôm-i.177151023.20208763729
 
 [sofatoanquoc.com]
 match = 30.0%%
@@ -192,9 +192,9 @@ title = Giường Ghế Xếp Duy Lợi
 url = https://www.duyloi.com/vn/giuong-ghe.html
 
 [noithatviva.vn]
-match = -105.0%%
-title = Tham khảo bảng giá giường ngủ tân cổ điển chính xác và ...
-url = https://noithatviva.vn/tin-tuc/tham-khao-bang-gia-giuong-ngu-tan-co-dien-chinh-xac-va-moi-nhat.html
+match = -85.0%%
+title = Top 15 Giường Ngủ Hình Ngôi Nhà Cho Bé Vừa Bền ...
+url = https://noithatviva.vn/tin-tuc/top-15-giuong-ngu-hinh-ngoi-nha-cho-be-vua-ben-vua-re-thinh-hanh-nhat.html
 
 [cafeland.vn]
 match = -120.0%%
