CI images update

--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-14 09:51:32
+lastsearch = 2024-07-14 12:40:51
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -72,9 +72,9 @@ title = SỐC: Thương lái ôm tiền tỷ biến mất, người nuôi tôm k
 url = https://www.youtube.com/watch?v=1RKUOd84ucQ
 
 [books.google.com]
-match = -143.8%%
-title = Chiến sĩ Cộng Hòa - Page 19 - Google Books Result
-url = https://books.google.com/books?id=X2clAAAAMAAJ&pg=RA9-PA19&lpg=RA9-PA19&dq=chieu+lac+soc+16&source=bl&ots=p30PZE5-Ip&sig=ACfU3U1xOL6oYt0YbVrzxm1vaWz5n7fXRg&hl=en&sa=X&ved=2ahUKEwjk9Kqxk6WHAxVSDTQIHYgZDOYQ6AF6BAglEAM
+match = -218.8%%
+title = Chức vụ cung ứng Lời Tập 25 Số 1 Kì 2: Nghiên cứu kết tinh ...
+url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+16&source=bl&ots=aHaaHP7lx8&sig=ACfU3U2gJ9E4PQS5QOnQqtaRuNlMLk8TgQ&hl=en&sa=X&ved=2ahUKEwjkz7bx6KWHAxXnBEQIHSwzDUUQ6AF6BAgdEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
