--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-14 11:20:44
+lastsearch = 2024-07-14 12:39:56
 
 [scholar.google.com]
 match = -43.8%%
@@ -117,9 +117,9 @@ title = THUẬN PHÁO MAI HOA TUYỀN PHÁ HOÀNH XE TẬP 18
 url = https://www.youtube.com/watch?v=5tAzMm3oK7w
 
 [books.google.com]
-match = -218.8%%
-title = Gazetteer to AMS 1:250,000 Maps of Indochina (series L509).
-url = https://books.google.com/books?id=3gZclKX0dQYC&pg=PA272&lpg=PA272&dq=chieu+lac+soc+18&source=bl&ots=LZu5ZS8FUj&sig=ACfU3U14RKi9LbG2oMpYcwAetV0obQ6KcQ&hl=en&sa=X&ved=2ahUKEwjxxrX91qWHAxWZrokEHby1CqkQ6AF6BAgaEAM
+match = -231.2%%
+title = Cuộc di cư lịch sử tại Viêt Nam - Page 66 - Google Books Result
+url = https://books.google.com/books?id=Cag8AAAAMAAJ&pg=PA66&lpg=PA66&dq=chieu+lac+soc+18&source=bl&ots=N_dTD7gvWK&sig=ACfU3U3pnQSG9dJaBYNDpw9ERIVGVrCHQQ&hl=en&sa=X&ved=2ahUKEwiercLX6KWHAxVgEUQIHT9jACUQ6AF6BAgbEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
