--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-14 11:19:05
+lastsearch = 2024-07-14 12:40:39
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -17,9 +17,9 @@ title = Can HOA come onto my property?
 url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
 
 [www.quora.com]
-match = -194.1%%
-title = If you live in a neighborhood with a HOA can they keep out ...
-url = https://www.quora.com/If-you-live-in-a-neighborhood-with-a-HOA-can-they-keep-out-a-resident-if-they-are-not-listed-on-the-deed
+match = -176.5%%
+title = Is it legal for a Florida HOA president to hire and pay ...
+url = https://www.quora.com/Is-it-legal-for-a-Florida-HOA-president-to-hire-and-pay-himself-as-a-Handyman-for-the-community-of-which-he-is-the-HOA-President
 
 [lauragoodsonart.com]
 match = 47.1%%
@@ -307,9 +307,9 @@ title =
 url = https://dessaules.com/blog/how-to-fight-hoa-fines
 
 [www.11alive.com]
-match = -164.7%%
-title = HOA buys home through foreclosure for $3.24 - Atlanta
-url = https://www.11alive.com/article/news/investigations/the-reveal/hoa-battles-metro-atlanta/85-c33d4c4e-b9c4-46cb-8042-394ef1121399
+match = -123.5%%
+title = Georgia bill aims to help provide HOA oversight
+url = https://www.11alive.com/article/news/investigations/georgia-senator-proposes-new-office-hoa-disputes/85-98c61929-f403-4f18-8075-2cae85b01228
 
 [www.justanswer.com]
 match = -170.6%%
@@ -422,7 +422,12 @@ title =
 url = https://www.nolo.com/legal-encyclopedia/can-your-hoa-prohibit-you-from-flying-your-favorite-flag.html
 
 [www.southfloridalawpllc.com]
-match = -41.2%%
-title = HOA or Condo Association Disputes
-url = https://www.southfloridalawpllc.com/2021/03/10/hoa-or-condo-association-disputes/
+match = -88.2%%
+title = Q&A: Florida HOA Board Member Certification
+url = https://www.southfloridalawpllc.com/2021/08/15/qa-florida-hoa-board-member-certification/
+
+[www.nomadicrealestate.com]
+match = 0.0%%
+title = 
+url = https://www.nomadicrealestate.com/hoa-rules-hierarchy/
 
