--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-07-14 10:20:25
+lastsearch = 2024-07-14 12:38:05
 
 [www.lazada.vn]
 match = -55.6%%
@@ -260,4 +260,9 @@ url = https://www.nrc.gov/docs/ML1922/ML19221A563.pdf
 match = -111.1%%
 title = 3-hole basin mixer 70 with push-open waste set
 url = https://www.axor-design.com/asia/articledetail-axor-myedition-3-hole-basin-mixer-70-with-push-open-waste-set-47050000
+
+[changakhachsan.net]
+match = 43.8%%
+title = Vỏ gối khách sạn
+url = https://changakhachsan.net/san-pham/vo-goi-khach-san/
 
