--- a/images/nem-everon-180x200x9/config.ini
+++ b/images/nem-everon-180x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-180x200x9.html
 lastopen = 2024-06-06 17:09:32
 
 [search]
-lastsearch = 2024-07-14 12:33:59
+lastsearch = 2024-07-14 13:44:45
 
 [www.everonvn.vn]
 match = -75.0%%
@@ -22,8 +22,8 @@ title = Bảng Giá Đệm Everon Năm 2024
 url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon
 
 [www.changagoidemeveron.vn]
-match = -105.0%%
-title = Đệm Everon, Bảng giá đệm bông ép Everon Hàn Quốc ...
+match = -135.0%%
+title = Đệm Everon, Bảng giá đệm bông ép Everon Hàn Quốc chính ...
 url = http://www.changagoidemeveron.vn/3/everon/dem-bong-ep-everon.html
 
 [akasi.com.vn]
