--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-14 13:18:41
+lastsearch = 2024-07-14 13:46:12
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -22,14 +22,14 @@ title = Riot is cutting back budget on esports? : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/9aqbes/riot_is_cutting_back_budget_on_esports/
 
 [en.wikipedia.org]
-match = 0.0%%
-title = 
+match = -33.3%%
+title = Nam Joo-hyuk
 url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
 
 [www.facebook.com]
 match = -160.0%%
-title = West Point Department of History - CPT Makonen Campbell asks ...
-url = https://www.facebook.com/photo.php?fbid=2240494186000553&id=130999010283425&set=a.135510956498897&locale=hu_HU
+title = CDT Jake Sorrels successfully defended his senior thesis “ ...
+url = https://www.facebook.com/photo.php?fbid=2759708960745737&id=130999010283425&set=a.135510956498897&locale=hu_HU
 
 [www.vietnam.vn]
 match = -155.0%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -160.0%%
-title = (Olympics) Confusion reigns after chaotic finish in short ...
-url = https://en.yna.co.kr/view/AEN20180213013100315
+match = -110.0%%
+title = 122 ships affected by suspected N. Korean GPS jamming
+url = https://en.yna.co.kr/view/AEN20120504005000315
 
 [www.vlr.gg]
 match = 5.6%%
