CI images update

--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-clfi/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-clfi/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-clfi.html
 lastopen = 2024-06-06 17:09:48
 
 [search]
-lastsearch = 2024-07-14 11:35:36
+lastsearch = 2024-07-14 13:55:53
 
 [www.everonvn.vn]
 match = 29.6%%
@@ -60,4 +60,9 @@ url = https://db.audioasylum.com/cgi/search.mpl?author=afro18&forum=ALL&sortRank
 match = 0.0%%
 title = The 5 Fragrances I Should've Avoided
 url = https://www.youtube.com/watch?v=YXCraZmDmjc
+
+[everon.com.vn]
+match = 7.3%%
+title = ĐỆM LÒ XO KINGKOIL (MỸ) Showroom Chăn Ga Gối đệm ...
+url = https://everon.com.vn/kingkoil/
 
