--- a/images/tham-giuong-bo-de-18/config.ini
+++ b/images/tham-giuong-bo-de-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-18.html
 lastopen = 2024-06-09 22:57:01
 
 [search]
-lastsearch = 2024-07-14 04:28:41
+lastsearch = 2024-07-14 13:57:33
 
 [erado.vn]
 match = 0.0%%
@@ -88,7 +88,7 @@ url = https://www.liena.com.vn/kich-thuoc-giuong-ngu-tieu-chuan
 
 [noithatthienhoa.vn]
 match = -125.0%%
-title = Bộ phòng ngủ giường nhiều ngăn kéo -18 - Nội thất Thiên Hòa
+title = Bộ phòng ngủ giường nhiều ngăn kéo -18 - nội thất Thiên Hòa
 url = https://noithatthienhoa.vn/bo-phong-ngu-giuong-nhieu-ngan-keo-18/
 
 [noithatgiakhanh.net]
