--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-07-14 13:21:49
+lastsearch = 2024-07-14 13:53:08
 
 [everon.online]
 match = 19.2%%
@@ -39,7 +39,7 @@ url = https://www.tiktok.com/discover/mưa-bụi-thuong-hai
 [books.google.com]
 match = -103.8%%
 title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiTZItDYy&sig=ACfU3U3qcka0Ie2R-3z91i-spEDTYlXZHA&hl=en&sa=X&ved=2ahUKEwiug-OF8qWHAxUfIzQIHdGSD2sQ6AF6BAgTEAM
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiTZIuL3H&sig=ACfU3U2MEJV8ooYspc0xiQPJBgqAlB2Feg&hl=en&sa=X&ved=2ahUKEwj_tt2F-aWHAxVADkQIHfOIBFcQ6AF6BAgWEAM
 
 [everonchinhhang.vn]
 match = -19.2%%
@@ -52,9 +52,9 @@ title = Màn hình LCD 1602 - Linhkienthanhcong.vn
 url = https://linhkienthanhcong.com/lcd1602-5v
 
 [shop.nagakawa.com.vn]
-match = -57.7%%
-title = Máy hút mùi cao cấp Nagakawa NKKH01M70 - Bảo hành ...
-url = https://shop.nagakawa.com.vn/may-hut-mui-cao-cap-nagakawa-nkkh01m70.html
+match = -42.3%%
+title = Bộ 3 nồi inox 4 đáy Nagakawa NAG1306 (16cm, 20cm ...
+url = https://shop.nagakawa.com.vn/bo-3-noi-inox-4-day-nagakawa-nag1306-16cm-20cm-24cm-quai-vang.html
 
 [giaiphapchung.vn]
 match = 11.5%%
@@ -74,7 +74,7 @@ url = https://fujimaster.com.vn/
 [store.steampowered.com]
 match = -76.9%%
 title = Tiết kiệm đến 75%% khi mua Marvel's Midnight Suns trên ...
-url = https://store.steampowered.com/app/368260/Marvels_Midnight_Suns/?l=vietnamese&curator_clanid=34646864
+url = https://store.steampowered.com/app/368260/Marvels_Midnight_Suns/?l=vietnamese&snr=1_1056_4_1056_curator-tabs&curator_clanid=42342144
 
 [vi.wikipedia.org]
 match = -3.8%%
