--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-07-14 11:16:38
+lastsearch = 2024-07-14 13:49:15
 
 [www.instagram.com]
 match = -30.8%%
@@ -47,9 +47,9 @@ title =
 url = https://www.behindthename.com/name/yuki01chan/submitted
 
 [hk.linkedin.com]
-match = -107.7%%
-title = Yuki Chan - Hong Kong, Hong Kong SAR
-url = https://hk.linkedin.com/in/yuki-y-chan?trk=public_profile_samename-profile
+match = -223.1%%
+title = Chan Hoi Ching - Hong Kong SAR | Professional Profile
+url = https://hk.linkedin.com/in/chan-hoi-ching-381002b7
 
 [www.eduhk.hk]
 match = -200.0%%
