--- a/images/chieu-cay-cao-bang-a-16/config.ini
+++ b/images/chieu-cay-cao-bang-a-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-16.html
 lastopen = 2024-06-09 22:42:42
 
 [search]
-lastsearch = 2024-07-14 10:33:13
+lastsearch = 2024-07-14 13:53:21
 
 [shopee.vn]
-match = -4.3%%
-title = CHIẾU TRÚC CAO SƠN – CAO BẰNG LOẠI 1 HÀNG ĐẸP
-url = https://shopee.vn/CHIẾU-TRÚC-CAO-SƠN-–-CAO-BẰNG-LOẠI-1-HÀNG-ĐẸP-i.270303342.11105491570
+match = -43.5%%
+title = Chiếu trúc Tây Bắc Cao Bằng loại đẹp (Mát Lạnh Mùa Hè)
+url = https://shopee.vn/Chiếu-trúc-Tây-Bắc-Cao-Bằng-loại-đẹp-(Mát-Lạnh-Mùa-Hè)-i.453113145.9960128744
 
 [www.diepxuan.com]
 match = 26.1%%
