--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-14 12:40:51
+lastsearch = 2024-07-14 13:55:09
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -74,7 +74,7 @@ url = https://www.youtube.com/watch?v=1RKUOd84ucQ
 [books.google.com]
 match = -218.8%%
 title = Chức vụ cung ứng Lời Tập 25 Số 1 Kì 2: Nghiên cứu kết tinh ...
-url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+16&source=bl&ots=aHaaHP7lx8&sig=ACfU3U2gJ9E4PQS5QOnQqtaRuNlMLk8TgQ&hl=en&sa=X&ved=2ahUKEwjkz7bx6KWHAxXnBEQIHSwzDUUQ6AF6BAgdEAM
+url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+16&source=bl&ots=aHaaHQ2gt7&sig=ACfU3U3pSvPY0RlFnxp0ObTNUjC7gMvBqA&hl=en&sa=X&ved=2ahUKEwis2ry_-aWHAxXZIEQIHWvIAAgQ6AF6BAgaEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
