--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-14 13:42:49
+lastsearch = 2024-07-14 13:49:02
 
 [quizlet.com]
 match = -170.0%%
@@ -52,9 +52,9 @@ title = List of acupuncture points
 url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 
 [books.google.com]
-match = -440.0%%
-title = The Monasteries of the Wadi 'n Natrûn: The history of the ...
-url = https://books.google.com/books?id=_mIPAQAAMAAJ&pg=PA206&lpg=PA206&dq=man+ren+16&source=bl&ots=HlovFk65EZ&sig=ACfU3U1Sfu8DGVI0JeWpJK8UhhUyJ7IvZw&hl=en&sa=X&ved=2ahUKEwi07Lre9qWHAxWNv4kEHfERAVcQ6AF6BAgTEAM
+match = -430.0%%
+title = Proceedings of the 10th West Coast Conference on Formal ...
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlerKMsm7&sig=ACfU3U3t6jOTcCAFnNo8mFK-E0L3724nZA&hl=en&sa=X&ved=2ahUKEwiiqo2Q-KWHAxUzkO4BHbMhBbEQ6AF6BAgYEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
