--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-14 04:33:21
+lastsearch = 2024-07-14 13:50:45
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -97,9 +97,9 @@ title = Gold Price Prediction For Tomorrow, This Week And Month.
 url = https://30rates.com/gold-price-forecast-and-predictions
 
 [www.ncbi.nlm.nih.gov]
-match = -108.7%%
-title = The Lived Experiences of COVID-19 Patients in South Korea
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8307440/
+match = -100.0%%
+title = Response to COVID-19 in South Korea and implications for ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7544529/
 
 [www.csis.org]
 match = -52.2%%
